--- a/product/视频服务/移动直播/基础功能/连麦互动/直播连麦.md
+++ b/product/视频服务/移动直播/基础功能/连麦互动/直播连麦.md
@@ -93,12 +93,12 @@
 <dx-codeblock>
 ::: java java
 V2TXLivePusher pusher = new V2TXLivePusherImpl(this, V2TXLiveMode.TXLiveMode_RTC);
-pushURLA= "trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&amp;amp;userId=A&amp;amp;usersig=xxx";
+pushURLA= "trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&userId=A&usersig=xxx";
 pusher.startPush(pushURLA);
 :::
 ::: Objective-C ObjectiveC
 V2TXLivePusher *pusher = [[V2TXLivePusher alloc] initWithLiveMode:V2TXLiveMode_RTC];
-NSString *pushURLA = @"trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&amp;amp;userId=A&amp;amp;usersig=xxx";
+NSString *pushURLA = @"trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&userId=A&usersig=xxx";
 [pusher startPush:pushURLA];
 :::
 </dx-codeblock>
@@ -139,12 +139,12 @@ V2TXLivePlayer player = new V2TXLivePlayerImpl(mContext);
 <dx-codeblock>
 ::: java java
 V2TXLivePusher pusher = new V2TXLivePusherImpl(this,V2TXLiveMode.TXLiveMode_RTC);
-pushURLB= "trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&amp;amp;userId=B&amp;amp;usersig=xxx";
+pushURLB= "trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&userId=B&usersig=xxx";
 pusher.startPush(pushURLB);
 :::
 ::: Objective-C ObjectiveC
 V2TXLivePusher *pusher = [[V2TXLivePusher alloc] initWithLiveMode:V2TXLiveMode_RTC];
-NSString *pushURLB = @"trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&amp;amp;userId=B&amp;amp;usersig=xxx";
+NSString *pushURLB = @"trtc://cloud.tencent.com/push/streamid?sdkappid=1400188888&userId=B&usersig=xxx";
 [pusher startPush:pushURLB];
 :::
 </dx-codeblock>
@@ -157,12 +157,12 @@ NSString *pushURLB = @"trtc://cloud.tencent.com/push/streamid?sdkappid=140018888
 <dx-codeblock>
 ::: java java
 V2TXLivePlayer player = new V2TXLivePlayerImpl(mContext);
-playURLB= "trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&amp;amp;userId=B&amp;amp;usersig=xxx&amp;amp;appscene=live";
+playURLB= "trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&userId=B&usersig=xxx&appscene=live";
 player.startPlay(playURLB);
 :::
 ::: Objective-C ObjectiveC
 V2TXLivePlayer * player = [[V2TXLivePlayer alloc] init];
-NSString* playURLB = @"trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&amp;amp;userId=B&amp;amp;usersig=xxx&amp;amp;appscene=live";
+NSString* playURLB = @"trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&userId=B&usersig=xxx&appscene=live";
 [player setRenderView:view];
 [player startPlay:playURLB];
 :::
@@ -172,12 +172,12 @@ NSString* playURLB = @"trtc://cloud.tencent.com/play/streamid?sdkappid=140018888
 <dx-codeblock>
 ::: java java
 V2TXLivePlayer player = new V2TXLivePlayerImpl(mContext);
-playURLA= "trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&amp;amp;userId=A&amp;amp;usersig=xxx&amp;amp;appscene=live";
+playURLA= "trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&userId=A&usersig=xxx&appscene=live";
 player.startPlay(playURLA);
 :::
 ::: Objective-C ObjectiveC
 V2TXLivePlayer * player = [[V2TXLivePlayer alloc] init];
-NSString* playURLA = @"trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&amp;amp;userId=A&amp;amp;usersig=xxx&amp;amp;appscene=live";
+NSString* playURLA = @"trtc://cloud.tencent.com/play/streamid?sdkappid=1400188888&userId=A&usersig=xxx&appscene=live";
 [player setRenderView:view];
 [player startPlay:playURLA];
 :::
@@ -297,7 +297,7 @@ pusher.setMixTranscodingConfig(config);
 >! 发起云端混流后，默认混流 ID，是发起混流者的 ID，如果需要指定流 ID，需要进行传入。
 
 这样其他观众在观看时，就可以看到 A，B 两个主播的连麦互动。
-	
+    
 
 [](id:price)
 ## RTC 连麦方案怎么计算费用
@@ -450,7 +450,7 @@ RTC 连麦互动直播服务后付费有 [日结](#daily) 和 [月结](#monthly)
 
 - **日结后付费：**[](id:daily)
   2020年09月01日起首次在 实时音视频 控制台创建 [应用](https://cloud.tencent.com/document/product/647/46351#.E5.BA.94.E7.94.A8 ) 的用户，后付费生效后默认采用**日结**方式结算。按日计费，每天上午10点扣除前一天产生的费用。
-	
+    
 - **月结后付费：**[](id:monthly)
   2020年08月31日及之前首次在实时音视频控制台创建 [应用](https://cloud.tencent.com/document/product/647/46351#.E5.BA.94.E7.94.A8 ) 的用户，后付费生效后默认采用**月结**方式结算。按月计费，每月01日 - 05日从您的账户余额中扣除前一月产生的费用，详情以 [计费账单](https://cloud.tencent.com/document/product/555/14192#.E4.BA.8C.E3.80.81.E6.96.B0.E7.89.88.E8.B4.A6.E5.8D.95.E5.8A.9F.E8.83.BD.E7.AE.80.E4.BB.8B) 为准。
 
