--- a/product/安全服务/BGP 高防包/高防包（新）/4 操作指南/防护配置/0 防护等级与清洗阈值.md
+++ b/product/安全服务/BGP 高防包/高防包（新）/4 操作指南/防护配置/0 防护等级与清洗阈值.md
@@ -1,4 +1,4 @@
-本文档将为您介绍针对 DDoS 攻击，DDoS 高防包提供的不同防护等级的相关操作及应用场景，并为您介绍如何在控制台中设置 DDoS 防护等级。
+ 本文档将为您介绍针对 DDoS 攻击，DDoS 高防包提供的不同防护等级的相关操作及应用场景，并为您介绍如何在控制台中设置 DDoS 防护等级。
 ## 应用场景
 DDoS 高防包服务提供防护策略调整功能，针对 DDoS 攻击提供三种防护等级供您选择，各个防护等级的具体防护操作如下：
 
@@ -11,7 +11,7 @@ DDoS 高防包服务提供防护策略调整功能，针对 DDoS 攻击提供三
 ::: 适中防护
 | 防护等级 | 防护操作                                                     | 描述                                                         |
 | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 适中     | <li>过滤明确攻击特征的 SYN、ACK 数据包。</li><li>过滤不符合协议规范的 TCP、UDP、ICMP 数据包。</li><li>过滤具有明确攻击特征的 UDP 数据包。</li><li>过滤常见基于 UDP 的攻击数据包。</li><li>对部分访问源 IP 进行主动验证。</li> | <li>清洗策略适配绝大多数业务，可有效防护常见攻击。</li><li>默认为适中模式。</li> |
+| 适中     | <li>过滤明确攻击特征的 SYN、ACK 数据包。</li><li>过滤不符合协议规范的 TCP、UDP、ICMP 数据包。</li><li>过滤具有明确攻击特征的 UDP 数据包。</li><li>过滤常见基于 UDP 的攻击数据包。</li><li>对部分访问源 IP 进行主动验证。</li> | <li>清洗策略适配绝大多数业务，可有效防护常见攻击。</li><li>默认为适中模式。</li><li>此防护等级只适用于 Web 网站业务，不适用于 API/APP 类业务。如果为 API/APP 类业务，请配置 CC 频率限制策略进行防护。</li> |
 :::
 ::: 严格防护
 | 防护等级 | 防护操作                                                     | 描述                                                 |
