--- a/product/互联网中间件/TDMQ CMQ 版/03 快速入门/队列模型快速入门.md
+++ b/product/互联网中间件/TDMQ CMQ 版/03 快速入门/队列模型快速入门.md
@@ -8,20 +8,17 @@
 
 ## 操作步骤
 
-### 步骤1. 创建队列服务
+### 步骤1：创建队列服务
 
 1. 登录 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue)。
-
-2. 在左侧导航栏选择【队列服务】，选择好地域，单击【新建】，配置队列服务相关属性值。
-
-   ![](https://main.qcloudimg.com/raw/d7998a58a3e670943331bbd82f06794d.png)
-
-   
-
+2. 在左侧导航栏选择**队列服务**，选择地域后，单击**新建**，配置队列服务相关属性值。
+<img src="https://main.qcloudimg.com/raw/d7998a58a3e670943331bbd82f06794d.png" width="550px">
+ 
+ 
    | 属性                   | 说明                                                         | 取值                                                         |
    | :--------------------- | :----------------------------------------------------------- | :----------------------------------------------------------- |
-   | 队列名称               | QueueName，为队列的名称。                                    | 作为资源的唯一标识，调用 API 接口进行操作时，以 Queue name 为准，创建成功后无法修改。为了防止混淆，不允许创建大小写同名队列，请注意使用时严格区分大小写，并且不能以-retry和-dlq结尾。 |
-   | 消息生命周期           | 队列的 msgRetentionSeconds 属性， 消息在本队列中的保留时间，从发送到该队列开始经过此参数指定的时间后，该消息会变得可被删除（不一定会被及时清除。 | 单位：秒，有效值范围：60 - 1296000秒，即1分钟 - 15天。       |
+   | <nobr>队列名称</nobr>               | QueueName，为队列的名称。                                    | 作为资源的唯一标识，调用 API 接口进行操作时，以 Queue name 为准，创建成功后无法修改。为了防止混淆，不允许创建大小写同名队列，请注意使用时严格区分大小写，并且不能以-retry和-dlq结尾。 |
+   | 消息生命周期           | 队列的 msgRetentionSeconds 属性， 消息在本队列中的保留时间，从发送到该队列开始经过此参数指定的时间后，该消息会变得可被删除（不一定会被及时清除）。 | 单位：秒，有效值范围：60 - 1296000秒，即1分钟 - 15天。       |
    | 消息接收长轮询等待时间 | PollingWaitSeconds，长轮询等待时，一个消息消费请求只会在取到有效消息或长轮询超时时才返回响应，类似于Ajax请求的长轮询。 | 单位：秒。有效值范围：0 - 30秒。                             |
    | 取出消息隐藏时长       | 该项为队列的VisibilityTimeout属性，每条Message都有个默认的VisibilityTimeout，Worker在接收到消息后，timeout就开始计时了。如果Worker在timeout时间内没能处理完Message，那么消息就有可能被其他Worker接收到并处理。 | 单位：秒。有效值范围：1 - 43200秒，即1秒 - 12小时。          |
    | 死信队列               | 死信队列用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时，MQ 不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中。 | -                                                            |
@@ -29,14 +26,12 @@
    | 消息回溯               | 若未开启“消息回溯”能力，则消费者已消费，且确认删除的消息，会立即删除，开启该功能时，须指定回溯的“可回溯周期”。 | “可回溯周期”的范围，必须小于等于消息的生命周期。建议将回溯周期与消息的生命周期设置为相同的值，便于定位问题。 |
    | 指定时间范围           | 当开启消息回溯后可配置时间范围项。控制台默认不开启。开启后时间默认跟消息生命周期设置相同值。 | 时间范围：1秒 - 15天，最大可回溯时间点 = 当前时间 - 设置的可回溯时间范围。消息生产时间在这个值之前的不可回溯。 |
 
-3. 单击【提交】，在队列服务列表可以看到创建好的队列服务。
+3. 单击**提交**，在队列服务列表可以看到创建好的队列服务。
 
-### 步骤2. 使用 SDK 收发消息
+### 步骤2：使用 SDK 收发消息
 
-1. [下载Demo]()并解压。
-
-2. 配置生产消息程序 ProducerDemo.java参数。
-
+1. [下载 Demo]() 并解压。
+2. 配置生产消息程序 ProducerDemo.java 参数。
    ```java
     Producer producer = new Producer();
            // 私有网络地址： http://{region}.mqadapter.cmq.tencentyun.com 支持腾讯云私有网络的云服务器内网访问
@@ -56,11 +51,12 @@
            String queue = "****";
    ```
    
+	 
    | 参数                | 说明                                                         |
    | ------------------- | ------------------------------------------------------------ |
-   | NameServerAddress   | API 调用地址，在[ TDMQ 控制台](https://console.cloud.tencent.com/tdmq)的**队列服务** > **API请求地址**处复制。![](https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png) |
-   | SecretId、SecretKey | 云API密钥，登录[访问管理控制台]()，在**访问密钥** > **API密钥管理**页面复制。![](https://main.qcloudimg.com/raw/867837e2b1e6d347ecb04d7085938c08.png) |
-   | queue               | 队列名称，在[ TDMQ 控制台](https://console.cloud.tencent.com/tdmq)的**队列服务**列表页面获取。 |
+   | NameServerAddress   | API 调用地址，在 [TDMQ 控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务** > **API请求地址**处复制。<img src="https://main.qcloudimg.com/raw/397c634ac38494666e878caf69cf55e7.png" width="400px"> |
+   | SecretId、SecretKey | 云 API 密钥，登录 [访问管理控制台](https://console.cloud.tencent.com/cam/overview)，在**访问密钥** > **API密钥管理**页面复制。![](https://main.qcloudimg.com/raw/867837e2b1e6d347ecb04d7085938c08.png) |
+   | queue               | 队列名称，在 [TDMQ 控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务**列表页面获取。 |
    
 3. 配置消费消息程序 SubscribeDemo.java 参数。
 
@@ -97,7 +93,7 @@
 
    ![](https://main.qcloudimg.com/raw/a3159643ea65bf596c92da89b72b8c71.png)
 
-6. 在 [TDMQ 控制台](https://console.cloud.tencent.com/tdmq)的**队列服务** > **监控**页面观察监控数据。
+6. 在 [TDMQ 控制台](https://console.cloud.tencent.com/tdmq) 的**队列服务** > **监控**页面观察监控数据。
 
 
 
