--- a/product/计算与网络/云联网/快速入门/跨账号网络实例互通.md
+++ b/product/计算与网络/云联网/快速入门/跨账号网络实例互通.md
@@ -7,8 +7,7 @@
 
 ## 步骤一：账号 A 创建云联网实例
 1. 使用账号 A  登录 [云联网控制台](https://console.cloud.tencent.com/vpc/ccn) 。
-2. 单击左侧目录中的**云联网**，进入云联网管理页面。
-3. 单击**+新建**。 
+2. 在云联网管理页面，单击**+新建**。 
 4. 在弹出框中填写云联网实例名称、描述，选择计费模式、服务质量、限速方式和关联实例的 VPC ID。
 >?关联实例，可在新建云联网时关联，也可创建好云联网后再关联。
 >
@@ -21,7 +20,7 @@
 3. 单击**立即关联**。
 ![](https://main.qcloudimg.com/raw/a316cdd6c8d32b654037894099a7e75d.png)
 4. 在弹出框中，选择**其他账号**，并输入账号 A 的账号 ID、云联网实例 ID。
-![](https://main.qcloudimg.com/raw/29bbc4c616fd2b6c64b463a6c9a8ec8d.png)
+![](https://main.qcloudimg.com/raw/bef2e13b3fb13273c626552f4c185772.png)
 5. 单击**确定**，即可向云联网所属账号发送关联申请。
 
 ## 步骤三：云联网账号 A 同意账号 B 的关联申请
