--- a/product/企业协同/腾讯会议/产品动态.md
+++ b/product/企业协同/腾讯会议/产品动态.md
@@ -36,7 +36,7 @@
 	<td><center> V2.14.0</center></td>
 	<td>
 1. 直播画面同步会议布局：主持人可实时共享直播画面，随时调整画面布局，观看侧即时同步，畅享流畅体验。<br>
-2. Oulook 插件官网可独立下载：支持 Outlook 邮箱一键预定及发起会议，拉起沟通更便捷，Outlook 插件官网可独立下载安装。<br>
+2. Outlook 插件官网可独立下载：支持 Outlook 邮箱一键预定及发起会议，拉起沟通更便捷，Outlook 插件官网可独立下载安装。<br>
 3. 个人笔记支持禁用屏幕截图：会议个人笔记安全升级，主持人可设置个人笔记禁用截图，高效保护企业信息安全。
 </td>
 <td><center>2021-06-29</center></td>
