--- a/product/计算与网络/云联网/快速入门/跨账号网络实例互通.md
+++ b/product/计算与网络/云联网/快速入门/跨账号网络实例互通.md
@@ -6,22 +6,20 @@
 - 需要互联的各 VPC 子网网段、IDC 网段没有冲突。
 
 ## 步骤一：账号 A 创建云联网实例
-1. 使用账号 A  登录 [云联网控制台](https://console.cloud.tencent.com/vpc/ccn) 。
-2. 在云联网管理页面，单击**+新建**。 
-4. 在弹出框中填写云联网实例名称、描述，选择计费模式、服务质量、限速方式和关联实例的 VPC ID。
+1. 使用账号 A  登录 [云联网控制台](https://console.cloud.tencent.com/vpc/ccn) ，在云联网管理页面，单击**+新建**。 
+2. 在弹出框中填写云联网实例名称、描述，选择计费模式、服务质量、限速方式和关联实例的 VPC ID。
 >?关联实例，可在新建云联网时关联，也可创建好云联网后再关联。
 >
 ![](https://main.qcloudimg.com/raw/3313389f06eb7d5c1e413263a7ef4c81.png)
-5. 单击**确定**即可。
+3. 单击**确定**即可。
 
 ## 步骤二：VPC 所属账号 B 申请关联云联网
-1. 使用账号 B 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc/vpc?rid=1) 。
-2. 在私有网络列表中，单击需要关联至云联网的 VPC 的 ID，进入详情页。
-3. 单击**立即关联**。
+1. 使用账号 B 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc/vpc?rid=1) ，在私有网络列表中，单击需要关联至云联网的 VPC 的 ID，进入详情页。
+2. 单击**立即关联**。
 ![](https://main.qcloudimg.com/raw/a316cdd6c8d32b654037894099a7e75d.png)
-4. 在弹出框中，选择**其他账号**，并输入账号 A 的账号 ID、云联网实例 ID。
+3. 在弹出框中，选择**其他账号**，并输入账号 A 的账号 ID、云联网实例 ID。
 ![](https://main.qcloudimg.com/raw/bef2e13b3fb13273c626552f4c185772.png)
-5. 单击**确定**，即可向云联网所属账号发送关联申请。
+4. 单击**确定**，即可向云联网所属账号发送关联申请。
 
 ## 步骤三：云联网账号 A 同意账号 B 的关联申请
 1. 使用账号 A 登录 [云联网控制台](https://console.cloud.tencent.com/vpc/ccn) 。
