--- a/product/监控与管理/企业组织/常见问题/操作问题.md
+++ b/product/监控与管理/企业组织/常见问题/操作问题.md
@@ -57,10 +57,7 @@
 3. 在对话框中，选择要将腾讯云账号移至的部门。
 
 ### 一个腾讯云账号可以是多个部门的成员吗？
-不可以。一个腾讯云账号一次只能是一个单元的成员。
-
-### 一个单元可以是多个部门的成员吗？
-不可以。一个单元一次只能是一个单元的成员。
+不可以。一个腾讯云账号一次只能是一个部门的成员。
 
 ### 部门层次结构中可以有多少层？
 您可以将部门嵌套5层。包括在最低部门中创建的根账号和腾讯云账号在内，您的层次结构可以为5层。
