--- a/product/互联网中间件/TDMQ CMQ 版/09 常见问题/功能类.md
+++ b/product/互联网中间件/TDMQ CMQ 版/09 常见问题/功能类.md
@@ -1,5 +1,5 @@
 ### TDMQ CMQ 版可以使用外网域名吗？
-TDMQ CMQ 版可以使用外网域名，具体地址在控制台的**API请求地址**获取。推荐您使用内网域名，**使用外网会收取流量费用，且外网时延可能较高**。 
+TDMQ CMQ 版可以使用外网域名，具体地址在控制台的**API请求地址**获取。推荐您使用内网域名，**使用外网会收取流量费用，且外网时延可能费用较高**。 
 
 ### 协作者账户可以使用 TDMQ CMQ 版吗？
 目前协作者、子账户均可以使用 TDMQ CMQ 版, 需要在 CAM 开通 TDMQ CMQ 版对应的资源操作权限。
@@ -27,10 +27,11 @@ CMQ 单条消息大小为1MB，单次请求的大小为1MB（指 HTTP post body 
 CMQ 使用 HTTP、TCP 协议，CMQ SDK 会维护 TCP 长连接。
 
 ### TDMQ CMQ 版会进行消息去重吗？
-目前TDMQ CMQ 版不会对消息进行去重。重复消息出现的原因以及去重方案，您可以参考 [消息去重]()。
+目前TDMQ CMQ 版不会对消息进行去重。重复消息出现的原因以及去重方案，您可以参考 [消息去重](https://cloud.tencent.com/document/product/1496/61032)。
 
 ### TDMQ CMQ 版消费消息时，pull 的长轮询是如何实现的？
 队列有 pollingWaitSeconds 属性，表示默认的队列长轮询时间。
 消费消息时如果有消息，则直接返回消息；如果当前队列没有消息，则会等待 pollingWaitSeconds 时间，如果在该时间内有消息则返回消息；如果超过了该时间仍然没有消息，则会报没有消息的异常。
+
 这里用户可以根据自己的需求来设置队列的这个属性，而且用户也可以在消费消息的时候指定 pollingWaitSeconds 时间，不用每次消费消息都使用这个默认值。
 
