--- a/product/存储与CDN/日志服务/API文档/投递任务管理（Ckafka）/创建投递任务.md
+++ b/product/存储与CDN/日志服务/API文档/投递任务管理（Ckafka）/创建投递任务.md
@@ -1,6 +1,9 @@
 ## 功能描述
 
-本接口用于新建投递任务。
+本接口用于创建投递任务。
+
+>! 创建时，需自行处理对 Ckafka 的写权限。
+>
 
 ## 请求
 
@@ -46,7 +49,7 @@ Content-Type: application/json
 | need_content| bool | body   | 否      | 是否投递日志的元数据信息，默认为 true |
 | content    | object | body  | 否      | 如果需要投递元数据信息，元数据信息的描述         |
 
-Ckafka 格式如下：
+ckafka 格式如下：
 
 |  字段名     |  类型  | 是否必有 |        含义                    |
 |------------|--------|---------|-------------------------------|
