--- a/product/存储与CDN/日志服务/API文档/投递任务管理（Ckafka）/修改投递任务.md
+++ b/product/存储与CDN/日志服务/API文档/投递任务管理（Ckafka）/修改投递任务.md
@@ -2,6 +2,9 @@
 
 本接口用于修改现有的投递任务。
 
+>! 创建时，需自行处理对 Ckafka 的写权限。
+>
+
 ## 请求
 
 ### 请求行
@@ -45,11 +48,11 @@ Content-Type: application/json
 |------------|--------|-------|---------|-------------------------------|
 | topic_id   | string | query | 是      | 投递任务绑定的 topic_id           |
 | effective  | bool   | body  | 否      | 投递任务是否生效              |
-| ckafka     | object | body  | 否      | ckafka 消费相关信息              |
-| content    | object | body   |否      | ckafka 的元数据信息          |
-| need_content| bool | body   | 否      | 是否投递 ckafka 的元数据信息，默认为 true |
+| ckafka     | object | body  | 否      | Ckafka 消费相关信息              |
+| content    | object | body   |否      | Ckafka 的元数据信息          |
+| need_content| bool | body   | 否      | 是否投递 Ckafka 的元数据信息，默认为 true |
 
-Ckafka 格式如下：
+ckafka 格式如下：
 
 |  字段名     |  类型  | 是否必有 |        含义                    |
 |------------|--------|---------|-------------------------------|
