--- a/product/计算与网络/无服务器云函数/开发指南/依赖安装.md
+++ b/product/计算与网络/无服务器云函数/开发指南/依赖安装.md
@@ -139,8 +139,7 @@ pip install numpy -t .
 
 
 
->!
->SCF 支持的 PHP 版本为 PHP 5.6 和 PHP 7.2，PHP 不同的小版本号存在不兼容的可能，请核对版本号后进行依赖安装。
+>! SCF 支持的 PHP 版本为 PHP 5.6 和 PHP 7.2，PHP 不同的小版本号存在不兼容的可能，请核对版本号后进行依赖安装。
 
 
 <dx-tabs>
