--- a/product/计算与网络/云联网/操作指南/操作总览.md
+++ b/product/计算与网络/云联网/操作指南/操作总览.md
@@ -5,7 +5,7 @@
 - [关联网络实例](https://cloud.tencent.com/document/product/877/18747)
 - [删除云联网实例](https://cloud.tencent.com/document/product/877/18748)
 - [解除网络实例关联](https://cloud.tencent.com/document/product/877/18757)
-- [添加 IDC 网段](https://cloud.tencent.com/document/product/877/19036)
+- [专线网关发布网段至云联网](https://cloud.tencent.com/document/product/877/19036)
 - [关联跨账号 VPC](https://cloud.tencent.com/document/product/877/19890)
 - [解关联跨账号 VPC](https://cloud.tencent.com/document/product/877/19891)
 
