--- a/product/物联网/物联网开发平台/开发中心/自定义推送示例.md
+++ b/product/物联网/物联网开发平台/开发中心/自定义推送示例.md
@@ -10,8 +10,8 @@
 
 1. 登录 [物联网开发平台控制台](https://console.cloud.tencent.com/iotexplorer?region=gz)，选择左侧菜单**数据开发**。
 2. 单击**新建数据流**，创建完成之后，单击**数据流名称**，进入数据流配置。
-3. 配置好 ”输入节点“、”处理节点“ 后，“输出节点” 选择**自定义推送**。
-4. 单击**自定义推送**，在右侧输入“推送标题“、”推送内容“、”接收推送服务器地址“、”鉴权Token“。
+3. 配置好 “输入节点”、“处理节点” 后，“输出节点” 选择**自定义推送**。
+4. 单击**自定义推送**，在右侧输入“推送标题”、“推送内容”、“接收推送服务器地址”、“鉴权 Token”。
 ![](https://main.qcloudimg.com/raw/e811058613a48af03af3a4c557922323.png)
 
 ## 验证消息来自物联网开发平台
