--- a/product/物联网/物联网开发平台/增值服务/增值服务/酷狗音乐服务.md
+++ b/product/物联网/物联网开发平台/增值服务/增值服务/酷狗音乐服务.md
@@ -101,7 +101,7 @@ public class MyApplication extends Application {
 #### 2. C-SDK 接入指引：
 
 ##### 概述：
-面向穿戴、小家电、儿童教育类等 Linux 或嵌入式操作系统终端设备的 IoT+K 音乐内容服务的 C-SDK 接入。设备移植 SDK 后，绑定在腾讯连连小程序后，可在腾讯连连小程序授权设备接入酷狗音乐的权限；通过酷狗音乐小程序可控制设备播放酷狗音乐的音频资源。
+面向穿戴、小家电、儿童教育类等 Linux 或嵌入式操作系统终端设备的 IoT+ 酷狗音乐内容服务的 C-SDK 接入。设备移植 SDK 后，绑定在腾讯连连小程序后，可在腾讯连连小程序授权设备接入酷狗音乐的权限；通过酷狗音乐小程序可控制设备播放酷狗音乐的音频资源。
 
 ##### 交互流程：
 ![](https://main.qcloudimg.com/raw/1829092a414c3ebc00e841c860b53426.png)
