--- a/product/存储与CDN/文件存储/6-最佳实践/通用标准型文件系统升级操作指引.md
+++ b/product/存储与CDN/文件存储/6-最佳实践/通用标准型文件系统升级操作指引.md
@@ -31,3 +31,23 @@
 1. 在文件系统管理页面，单击筛选栏。
 2. 选择【文件系统升级】，勾选【可升级】，单击【确定】，即可查看到当前地域下可升级的文件系统。
 ![](https://main.qcloudimg.com/raw/3a2298129ff646fd426264d9cb17fd82.png)
+
+## 常见问题
+1. 如何判断CFS实例是否需要升级？<br />
+在文件系统列表的右侧有升级按钮的，即为待升级的老版本实例。<br />
+2. 升级有什么优势？<br />
+a.性能提升<br />
+老版本的通用标准型实例，文件系统最大达吞吐能力为100MiB/s
+升级新版本的通用标准型实例后，文件系统起步吞吐能力提升至100MiB/s，带宽公式为：Min[100+存储量GiB*0.1,300]<br />
+b.容量上限提升<br />
+老版本上限为40TiB，新版本文件系统容量上限提升至160TiB，<br />
+3.升级需要多久的时间？<br />
+后台升级时间为 2-5分钟，操作升级前需要客户端卸载文件系统。升级后需重新挂载文件系统，建议至少预留半小时左右时间<br />
+4.升级是否会失败？<br />
+一般情况不会失败，若出现特殊情况，后台任务失败会触发告警，腾讯云技术支持会及时介入处理。<br />
+5.新购的实例还会有老版本的么？<br />
+新购买的通用标准型CFS实例都是最新版本的。
+6、实例升级会不会影响数据和兼容性能？<br />
+不会影响数据，也不会导致不兼容等情况。<br />
+7、升级后，访问文件时提示：无法访问xxx，句柄无效。<br />
+属于升级时没有在客户端执行解挂导致，请重启客户端，然后再进行挂载。<br />
