--- a/product/物联网/物联网开发平台/增值服务/增值服务/酷狗音乐服务.md
+++ b/product/物联网/物联网开发平台/增值服务/增值服务/酷狗音乐服务.md
@@ -608,5 +608,5 @@ tmeSdk.requestTMEApi(action: string, params) => Promise<TMEResponse>
 ## SDK 接入指引
 
 1. 应用端 SDK 使用可访问官网参考最新版本 [H5 自定义开发 SDK](https://cloud.tencent.com/document/product/1081/49029)。
-2. 设备端 SDK 使用 Github 托管，可访问 Github 下载最新版本 [Android SDK 接入指南](https://github.com/tencentyun/iot-device-java/blob/master/explorer/explorer-device-tme/README.md)、[设备端 C-SDK 接入指南](https://github.com/tencentyun/qcloud-iot-explorer-sdk-embedded-c/tree/master/docs)。
+2. 设备端 SDK 使用 Github 托管，可访问 Github 下载最新版本 [Android SDK 接入指南](https://github.com/tencentyun/qcloud-iot-explorer-sdk-embedded-c/blob/master/docs/%E8%AE%BE%E5%A4%87%E6%8E%A5%E5%85%A5%E9%85%B7%E7%8B%97%E9%9F%B3%E4%B9%90.md)。
 
