--- a/product/移动与通信/短信/审核标准/审核驳回原因/常见模板驳回原因与处理建议.md
+++ b/product/移动与通信/短信/审核标准/审核驳回原因/常见模板驳回原因与处理建议.md
@@ -79,7 +79,7 @@
    <tr>
       <td style="text-align:center">地产、教育行业只支持发验证码短信</td>
       <td>-</td>
-      <td>地产、教育行业只支持发验证码短信，不支持发普通通知和营销短信，请谅解</td>
+      <td>地产、教育行业只支持发验证码短信，不支持发普通通知和营销短信，请谅解。</td>
    </tr>
    <tr>
       <td style="text-align:center">涉及彩票、装修、运营商业务等模板审核标准中明显禁止的类型</td>
@@ -90,11 +90,6 @@
       <td style="text-align:center">带链接变量的</td>
       <td>-</td>
       <td>不支持将链接作为变量，请将链接作为固定文本。</td>
-   </tr>
-   <tr>
-      <td style="text-align:center">iOS</td>
-      <td>-</td>
-      <td>Android</td>
    </tr>
    <tr>
       <td style="text-align:center">明显盲发内容</td>
