--- a/product/移动与通信/短信/审核标准/审核驳回原因/常见签名驳回原因与处理建议.md
+++ b/product/移动与通信/短信/审核标准/审核驳回原因/常见签名驳回原因与处理建议.md
@@ -41,11 +41,11 @@
    <tr>
       <td rowspan='4'>材料内容错误</td>
       <td>委托授权书填写错误</td>
-      <td>请对照 <a href="https://cloud.tencent.com/document/product/382/39022#.E5.A7.94.E6.89.98.E6.8E.88.E6.9D.83.E4.B9.A6.E5.A1.AB.E5.86.99.E6.8C.87.E5.BC.95">委托书模板及填写指引。</a> 检查委托书的填写是否规范。</td>
+      <td>请对照 <a href="https://cloud.tencent.com/document/product/382/39022#.E5.A7.94.E6.89.98.E6.8E.88.E6.9D.83.E4.B9.A6.E5.A1.AB.E5.86.99.E6.8C.87.E5.BC.95">委托书模板及填写指引</a> 检查委托书的填写是否规范。</td>
    </tr>
    <tr>
       <td>APP 下载链接无效</td>
-      <td>APP 如未上架，可先用公司名称申请签名测试，待 APP 上架后再申请APP签名。个人用户 APP 未上架无法申请签名</td>
+      <td>APP 如未上架，可先用公司名称申请签名测试，待 APP 上架后再申请APP签名。个人用户 APP 未上架无法申请签名。</td>
    </tr>
    <tr>
       <td>公众号和小程序应用管理后台截图无法识别与签名的关系</td>
@@ -55,9 +55,9 @@
    </tr>
    <tr>
       <td>证明材料格式错误</td>
-      <td>"所有证明文件必须为原件的图片，即图片中公章必须为红色。
+      <td>所有证明文件必须为原件的图片，即图片中公章必须为红色。
 所有证明材料必须在有效期内且未涂改。
 证明文件必须为.jpg、.jpeg或.png格式的图片，每张图片不大于5MB。
-申请他用签名时，需要使用的授权委托书必须使用短信服务提供的标准 授权委托书 "</td>
+申请他用签名时，需要使用的授权委托书必须使用短信服务提供的标准 <a href="https://attachment-1252075342.cos.ap-guangzhou.myqcloud.com/%E6%8E%88%E6%9D%83%E5%A7%94%E6%89%98%E4%B9%A6.docx"> 授权委托书 </a>。</td>
    </tr>
 </table>
