--- a/product/监控与管理/云拨测（新）/操作指南/多维分析/端口性能任务分析.md
+++ b/product/监控与管理/云拨测（新）/操作指南/多维分析/端口性能任务分析.md
@@ -1,38 +1,13 @@
-本文将为您介绍如何通过地图、折线图、柱状图、数据统计图、表格等多维分析拨测任务的性能结果。
+当您成功创建“端口性能”拨测任务后，可以通过多维分析页面分析端口整体性能状况。
 
 ## 操作步骤
 
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
-2. 在左侧菜单栏中单击【多维分析】。
+2. 在左侧菜单栏中单击【多维分析】>选择【端口性能】拨测任务。
 3. 在多维分析页面即可通过地图、折线图、数字图、表格等多维度分析拨测数据。
+![](https://main.qcloudimg.com/raw/1976aacbe170489fd8320f7e872c6572.png)
 
-## 功能说明
 
-### 全局筛选
-
-支持任务、拨测点运营商、拨测点地区、错误类型四个条件对拨测性能指标数据进行筛选。
-
-![](https://main.qcloudimg.com/raw/b79a84195c9fb591c65aac72eab0fa4f.png)
-
-### 地图
-
-![](https://main.qcloudimg.com/raw/703fae3651c959ee4535bebf0d2b32ad.png)
-
-- 将鼠标悬浮在地图中，可看到各省份某段时间内的整体性能数据。
-- 整体性能排序红色>黄色>蓝色，三种颜色越深表示时延越长。
-
-### 数字图
-
-- 整体性能、TCP 用时、正确率和错误率将展示所选时间内的平均值。
-- 有效拨测次数和错误拨测次数将展示所选时间内的总和。
-
-### 折线图
-
-将鼠标悬浮在折线图中，可看到某段时间内的性能指标数据。
-
-### 表格
-
-表格用于展示各地域、各指标的性能数据。
 
 ## 指标说明
 
