--- a/product/监控与管理/云拨测（新）/操作指南/多维分析/音视频体验任务分析.md
+++ b/product/监控与管理/云拨测（新）/操作指南/多维分析/音视频体验任务分析.md
@@ -1,38 +1,12 @@
-本文将为您介绍如何通过地图、折线图、柱状图、数据统计图、表格等多维分析拨测任务的性能结果。
+当您成功创建“音视频体验”拨测任务后，可以通过多维分析页面分析音视频整体性能状况。
+
 
 ## 操作步骤
 
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
-2. 在左侧菜单栏中单击【多维分析】。
-3. 在多维分析页面即可通过地图、折线图、数字图、表格等多维度分析拨测数据。
-
-## 功能说明
-
-### 全局筛选
-
-支持任务、拨测点运营商、拨测点地区、错误类型四个条件对拨测性能指标数据进行筛选。
-
-![](https://main.qcloudimg.com/raw/b79a84195c9fb591c65aac72eab0fa4f.png)
-
-### 地图
-
-![](https://main.qcloudimg.com/raw/703fae3651c959ee4535bebf0d2b32ad.png)
-
-- 将鼠标悬浮在地图中，可看到各省份某段时间内的首次缓冲用时。
-- 时延排序红色 > 黄色 > 蓝色，三种颜色越深表示时延越长。
-
-### 数字图
-
-- 首次缓冲用时、视频首包用时、平均下载速度和可用性将展示所选时间内的平均值。
-- 总缓冲用时、总缓冲次数将展示所选时间内的总和。
-
-### 折线图
-
-将鼠标悬浮在折线图中，可看到某段时间内的性能指标数据。
-
-### 表格
-
-表格用于展示各地域、各指标的性能数据。
+2. 在左侧菜单栏中单击【多维分析】>选择【音视频体验】拨测任务。
+3. 在多维分析页面即可通过地图、折线图、数字图、详细数据等多维度分析拨测数据。
+![](https://main.qcloudimg.com/raw/95c7f29027082f15b10f6c0d11c08425.png)
 
 ## 指标说明
 
@@ -54,3 +28,6 @@
 | 错误次数            | 监测过程中，访问失败的次数。                                   |
 | top5 错误类型        | 展示前五个错误数量最多的错误类型。                             |
 | top5 最慢运营商      | 展示前五个总缓冲用时最慢的运营商。                             |
+|资源DNS用时|	播放器下载视频资源时对资源服务器域名DNS解析的用时|
+|资源TCP连接用时| 播放器下载视频资源时TCP建连用时|
+
