--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
@@ -1,4 +1,4 @@
-传输(上传/下载)场景通过文件上传/下载，获取应用的数据资源的传输速率，反映真实的带宽的波动性。本文将为您介绍如何新建传输任务。
+﻿文件传输（上传/下载)场景通过文件上传/下载，获取应用的数据资源的传输速率，反映真实的带宽的波动性。本文将为您介绍如何新建传输任务。
 
 ## 操作步骤
 
@@ -62,7 +62,7 @@
 </dx-alert>
 
 6.配置拨测参数（可选），配置说明如下：
-#### 上传：
+#### 文件上传：
 <table>
 <thread>
 <tr>
@@ -103,7 +103,7 @@
 </tr>
 </table>
 
-#### 下载：
+#### 文件下载：
 <table>
 <tr>
 <th> 配置项</th>
@@ -116,7 +116,7 @@
 <td> 自动</td>
 </tr>
 <tr>
-<td> 传输大小</td>
+<td> 传输大小（KB）</td>
 <td> 定义上传文件大小，传输大小须大于 0KB 且小于等于 51200KB</td>
 <td> 1024KB</td>
 </tr>
@@ -124,6 +124,16 @@
 <td> 自定义 Host</td>
 <td> 支持按 IP 地址轮询或随机监测，多个IP请用半角逗号分隔符，<br>例如：<ul style = "margin-bottom: 0px;"><li>IPv4：<code>192.168.2.1,192.168.2.5:img.a.com&#124;192.168.2.1?]:img.a.com&#124;</code></li><li>IPv6：<code>[0:0:0:0:0:0:0:1][8080],[0:0:0:0:0:0:0:2][8081]:www.a.com|]</code></li></ul>
 </td>
+<td> -</td>
+</tr>
+<tr>
+<td>DNS 劫持白名单</td>
+<td> 当任务的目标IP在DNS白名单内，则认定为没有发生了DNS劫持 </td>
+<td> -</td>
+</tr>
+<tr>
+<td>DNS 劫持黑名单</td>
+<td>  当任务的目标IP在DNS黑名单内，则认定为发生了DNS劫持</td>
 <td> -</td>
 </tr>
 </table>
