--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建音视频体验任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建音视频体验任务.md
@@ -1,4 +1,4 @@
-流媒体场景针对流媒体网站以及 App 视频文件的播放进行监测，获取播放过程中卡顿率、卡顿用时、首帧用时等的数据，帮助提升视频播放体验，提升用户体验效果。本文将为您介绍如何新建流媒体任务。
+﻿音视频体验场景针对流媒体网站以及 App 视频文件的播放进行监测，获取播放过程中卡顿率、卡顿用时、首帧用时等的数据，帮助提升视频播放体验，提升用户体验效果。本文将为您介绍如何新建音视频体验任务。
 
 ## 操作步骤
 
@@ -13,7 +13,7 @@
 </tr>
 <tr>
 <td> 任务类型</td>
-<td> 选择 PC 端或移动端流媒体任务类型</td>
+<td> 选择 PC 端或移动端“音视频体验”任务类型</td>
 </tr>
 <tr>
 <td> 拨测地址</td>
@@ -97,4 +97,15 @@
 <li>IPv4：<code>192.168.2.1,192.168.2.5:img.a.com&#124;192.168.2.1?]:img.a.com&#124;</code></li><li>IPv6：<code>[0:0:0:0:0:0:0:1][8080],[0:0:0:0:0:0:0:2][8081]:www.a.com|]</code></li></ul>
 </td>
 <td> -</td>
-</tr></table>							
+</tr>
+<tr>
+<td> 资源劫持白名单</td>
+<td> 填写任务DNS IP白名单，监测过程中发现白名单内的DNS IP 将认定为DNS劫持信息</td>
+<td> -</td>
+</tr>
+<tr>
+<td> 资源劫持黑名单</td>
+<td> 填写任务 DNS IP 黑名单，监测过程中发现黑名单内的 DNS IP 将认定为 DNS 劫持信息，非黑名单内的将认定为没有发生 DNS 劫持</td>
+<td> -</td>
+</tr>
+</table>							
