--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建页面性能任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建页面性能任务.md
@@ -1,4 +1,4 @@
-该任务用于 Web 应用性能体验场景，可以获取用户在不同的运营商、城市地域、浏览器版本、操作系统、设备等环境下，访问 Web 页面的体验数据，全面了解页面的性能。本文将为您介绍如何新建浏览任务。
+该任务用于 Web 页面性能体验场景，可以获取用户在不同的运营商、城市地域、浏览器版本、操作系统、设备等环境下，访问 Web 页面的体验数据，全面了解页面的性能。本文将为您介绍如何新建页面性能任务。
 
 ## 操作步骤
 
@@ -13,7 +13,7 @@
 </tr>
 <tr>
 <td> 任务类型</td>
-<td> 选择 PC 端或移动端浏览任务类型</td>
+<td> 选择 PC 端或移动端“页面性能”任务类型</td>
 </tr>
 <tr>
 <td> 拨测地址</td>
@@ -31,8 +31,8 @@
 </tr>
 </table>
 5. 根据下列说明配置拨测点。
-  i.选择方式：选择推荐拨测点组或自定义拨测点组（推荐的拨测节点为常用的节点）。
-  ii.选择拨测点：
+    i.选择方式：选择推荐拨测点组或自定义拨测点组（推荐的拨测节点为常用的节点）。
+    ii.选择拨测点：
   - 推荐拨测点组：您可以在左侧框勾选对应地域的拨测点，对应的节点信息将会在右侧框中显示。
   - 自定义拨测点组：选择拨测点地域>选择拨测点类型>在右侧框中勾选拨测点。拨测点类型说明如下：
 <table>
@@ -76,6 +76,31 @@
 <td> 自定义 Host</td>
 <td> 支持按 IP 地址轮询或随机监测，多个IP请用半角逗号分隔符，<br>例如：<ul style = "margin-bottom: 0px;">
 <li>IPv4：<code>192.168.2.1,192.168.2.5:img.a.com&#124;192.168.2.1?]:img.a.com&#124;</code></li><li>IPv6：<code>[0:0:0:0:0:0:0:1][8080],[0:0:0:0:0:0:0:2][8081]:www.a.com|]</code></li></ul></td>
+<td> -</td>
+</tr>
+<tr>
+<td>流量劫持（识别元素）</td>
+<td>设置浏览页面元素总个数。流量劫持功能，针对浏览页面时302跳转情况进行分类统计。（监测前提是页面中有302的元素，一般监测基础文档发生302后的情况） 
+<td> -</td>
+</tr>
+<tr>
+<td>流量劫持（劫持标识）</td>
+<td>设置匹配的关键信。流量劫持功能，针对浏览页面时302跳转情况进行分类统计。（监测前提是页面中有302的元素，一般监测基础文档发生302后的情况）  </td>
+<td> -</td>
+</tr>
+<tr>
+<td>页面篡改</td>
+<td>代表出现了域名设置之外的元素都属于页面被篡改。常见的表现形式为弹出广告、浮动广告、跳转等行为。  </td>
+<td> -</td>
+</tr>
+<tr>
+<td>DNS 劫持白名单</td>
+<td> 当任务的目标IP在DNS白名单内，则认定为没有发生了DNS劫持 </td>
+<td> -</td>
+</tr>
+<tr>
+<td>DNS 劫持黑名单</td>
+<td>  当任务的目标IP在DNS黑名单内，则认定为发生了DNS劫持</td>
 <td> -</td>
 </tr>
 </table>
