--- a/product/监控与管理/云拨测（新）/产品简介/产品优势.md
+++ b/product/监控与管理/云拨测（新）/产品简介/产品优势.md
@@ -1,4 +1,4 @@
-### 丰富的拨测节点资源
+﻿### 丰富的拨测节点资源
 
 云拨测支持全球监测网络，包括不同城市（中国境内和境外）、不同运营商（中国移动、中国联通、中国电信等）、不同终端（机房、网民、移动端）、不同网络条件（3G、4G、5G、WIFI）。
 PC拨测点：
@@ -12,9 +12,8 @@ PC拨测点：
 云拨测全程无需客户配合，通过全国各地区的拨测点，配置拨测任务，获取访问过程中的性能数据，并展示在报表平台。提前感知应用用户访问 过程中的性能问题，还可以做竞品对比，择优补短，及时调优，提高用户体验和产品竞争力。
 
 ### 数据可视化
-云拨测为您提供了多种场景和数据指标监控，例如云拨测支持网络监测、Web 应用性能体验、传输(上传/下载)、协议、流媒体五个场景监控和性能指标，并通过可视化图表进行各指标的展示。
+云拨测为您提供了多种场景和数据指标监控，例如云拨测支持网络质量、页面性能、端口性能、文件传输、音视频体验五个场景监控和性能指标，并通过可视化图表进行各指标的展示。
 
 ### 灵活告警服务
 
 云拨测为您提供了自定义的告警通道服务，支持配置多种指标的告警触发阈值，设为默认告警策略后，您可自定义告警接收人和发送渠道；一旦发生问题告警信息立刻推送给您，提高解决问题的效率和降低问题带来的影响。
-
