--- a/product/监控与管理/云拨测（新）/操作指南/多维分析/文件传输任务分析.md
+++ b/product/监控与管理/云拨测（新）/操作指南/多维分析/文件传输任务分析.md
@@ -1,39 +1,12 @@
-本文将为您介绍如何通过地图、折线图、柱状图、数据统计图、表格等多维分析拨测任务的性能结果。
+当您成功创建“文件传输（上传/下载）”拨测任务后，可以通过多维分析页面分析文件传输整体性能状况。
 
 ## 操作步骤
 
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
-2. 在左侧菜单栏中单击【多维分析】。
-3. 在多维分析页面即可通过地图、折线图、数字图、表格等多维度分析拨测数据。
+2. 在左侧菜单栏中单击【多维分析】>选择【文件传输】任务类型。
+3. 在多维分析页面即可通过地图、折线图、数字图、详细数据等多维度分析拨测数据。
 
-## 功能说明
-
-### 全局筛选
-
-支持任务、拨测点运营商、拨测点地区、错误类型四个条件对拨测性能指标数据进行筛选。
-
-![](https://main.qcloudimg.com/raw/b79a84195c9fb591c65aac72eab0fa4f.png)
-
-### 地图
-
-![](https://main.qcloudimg.com/raw/703fae3651c959ee4535bebf0d2b32ad.png)
-
-- 将鼠标悬浮在地图中，可看到各省份某段时间内的平均传输速度。
-- 平均传输速度排序红色>黄色>蓝色，三种颜色越深表示时延越长。
-
-### 数字图
-
-- 平均传输速度、首包用时、成功率和传输大小将展示所选时间内的平均值。
-- 错误次数、有效错误次数将展示所选时间内的总和。
-
-### 折线图
-
-将鼠标悬浮在折线图中，可看到某段时间内的性能指标数据。
-
-### 表格
-
-表格用于展示各地域、各指标的性能数据。
-
+![](https://main.qcloudimg.com/raw/26fa2573c39c842de0a63a51c9ab66b0.png)
 ## 指标说明
 
 | 指标                 | 指标说明                                                     |
@@ -50,4 +23,3 @@
 | TCP 用时              | 下载（上传）目标文件过程中建立 TCP 连接所耗的用时。              |
 | Top5 错误类          | 展示前五个错误次数最多的错误类型。                             |
 | Top5 最慢地区运营商  | 展示前五个平均传输速度最慢的运营商。                           |
-
