--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建端口性能任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建端口性能任务.md
@@ -1,4 +1,4 @@
-协议场景针对 GET、POST 协议或端口进行监测，监测接口响应性能、可用性，确保用户使用体验和业务可用性。本文将为您介绍如何新建协议任务。
+﻿协议场景针对 GET、POST 协议或端口进行监测，监测接口响应性能、可用性，确保用户使用体验和业务可用性。本文将为您介绍如何新建端口性能任务。
 
 ## 操作步骤
 
@@ -13,7 +13,7 @@
 </tr>
 <tr>
 <td> 任务类型</td>
-<td> 选择 PC 端或移动端协议任务类型。</td>
+<td> 选择 PC 端或“端口性能”任务类型。</td>
 </tr>
 <tr>
 <td> 拨测地址</td>
@@ -30,9 +30,10 @@
 <td> 支持1分钟、5分钟、10分钟、15分钟、30分钟、60分钟、120分钟的拨测频率。例如选择5分钟频率，侧表示每个拨测点每5分钟拨测一次。</td>
 </tr>
 </table>
+
 5. 根据下列说明配置拨测点。
-  i.选择方式：选择推荐拨测点组或自定义拨测点组（推荐的拨测节点为常用的节点）。
-  ii.选择拨测点：
+    i.选择方式：选择推荐拨测点组或自定义拨测点组（推荐的拨测节点为常用的节点）。
+    ii.选择拨测点：
   - 推荐拨测点组：您可以在左侧框勾选对应地域的拨测点，对应的节点信息将会在右侧框中显示。
   - 自定义拨测点组：选择拨测点地域>选择拨测点类型>在右侧框中勾选拨测点。拨测点类型说明如下：
 <table>
@@ -108,7 +109,6 @@
 <td> 不验证</td>
 </tr>
 </table>						
-
 
 
 
