--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建网络质量任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建网络质量任务.md
@@ -1,4 +1,4 @@
-网络监测针对应用网络稳定性，路由稳定性、DNS 解析正确率，包括ICMP时延和丢包率等进行监控。本文将为您介绍如何新建网络任务。
+网络质量监测针对应用网络稳定性，路由稳定性、DNS 解析正确率，包括ICMP时延和丢包率等进行监控。本文将为您介绍如何新建网络质量任务。
 
 ## 操作步骤
 
@@ -13,7 +13,7 @@
 </tr>
 <tr>
 <td> 任务类型</td>
-<td> 选择 PC 端或移动端的网络任务类型。</td>
+<td> 选择 PC 端或移动端的“网络质量”任务类型。</td>
 </tr>
 <tr>
 <td> 拨测地址</td>
@@ -30,9 +30,10 @@
 <td> 支持1分钟、5分钟、10分钟、15分钟、30分钟、60分钟、120分钟的拨测频率。例如选择5分钟频率，侧表示每个拨测点每5分钟拨测一次。</td>
 </tr>
 </table>
+
 5. 根据下列说明配置拨测点。
-  i.选择方式：选择推荐拨测点组或自定义拨测点组（推荐的拨测节点为常用的节点）。
-  ii.选择拨测点。
+    i.选择方式：选择推荐拨测点组或自定义拨测点组（推荐的拨测节点为常用的节点）。
+    ii.选择拨测点。
   - 推荐拨测点组：您可以在左侧框勾选对应地域的拨测点，对应的节点信息将会在右侧框中显示。
   - 自定义拨测点组：选择拨测点地域>选择拨测点类型>在右侧框中勾选拨测点。拨测点类型说明如下：
 <table>
@@ -84,12 +85,12 @@
      <td><span>ICPM </span></td>
     </tr>
     <tr>
-     <td><span>监测超时</span></td>
+     <td><span>监测超时（秒）</span></td>
      <td><span>定义监测超时时间，可填取值范围为：0 - 60秒（不包含0）。</span></td>
      <td><span>20秒</span></td>
     </tr>
     <tr>
-     <td><span>执行间隔</span></td>
+     <td><span>执行间隔（秒）</span></td>
      <td><span>定义 Ping 监测任务执行时间间隔，可选0.5s、1s、2s、3s、4s、5s、10s。</span></td>
      <td><span>0.5秒</span></td>
     </tr>
@@ -104,13 +105,13 @@
      <td><span>32KB</span></td>
     </tr>
     <tr>
-     <td><span>Package</span></td>
+     <td><span>切分Package</span></td>
      <td><span>根据需求决定是否需要切分测试的数据包。</span></td>
      <td><span>切分</span></td>
     </tr>
     <tr>
      <td rowspan="5"><span>DNS 监测</span></td>
-     <td><span>监测超时</span></td>
+     <td><span>监测超时（秒）</span></td>
      <td><span>定义监测超时时间，取值范围为0 - 45秒。</span></td>
      <td><span>5秒</span></td>
     </tr>
@@ -136,7 +137,7 @@
     </tr>
     <tr>
      <td rowspan="2"><span>Tracert 监测</span></td>
-     <td><span>监测超时</span></td>
+     <td><span>监测超时（秒）</span></td>
      <td><span>定义监测超时时间，取值范围为：0 - 300 秒（不包含0）。</span></td>
      <td><span>60秒</span></td>
     </tr>
@@ -145,7 +146,31 @@
      <td><span>填写跃点数，一个路由为一个跃点数。</span></td>
      <td><span>20</span></td>
     </tr>
+		<tr>
+<td rowspan="2">
+劫持监测参数
+</td>
+<td>
+DNS 劫持白名单
+</td>
+<td>
+当任务的目标IP在DNS白名单内，则认定为没有发生了DNS劫持。WAP 浏览不支持白名单劫持。
+</td>
+<td>
+-
+</td>
+		</tr>
+				<tr>
+<td>
+DNS 劫持黑名单
+</td>
+<td>
+当任务的目标IP在DNS黑名单内，则认定为发生了DNS劫持。WAP 浏览不支持白名单劫持。
+</td>
+<td>
+-
+</td>
+		</tr>
    </tbody>
   </table>
-
 
