--- a/product/监控与管理/云拨测（新）/操作指南/多维分析/端口性能任务分析.md
+++ b/product/监控与管理/云拨测（新）/操作指南/多维分析/端口性能任务分析.md
@@ -3,7 +3,7 @@
 ## 操作步骤
 
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
-2. 在左侧菜单栏中单击【多维分析】>选择【端口性能】拨测任务。
+2. 在左侧菜单栏中单击**多维分析**>选择**端口性能**拨测任务。
 3. 在多维分析页面即可通过地图、折线图、数字图、表格等多维度分析拨测数据。
 ![](https://main.qcloudimg.com/raw/1976aacbe170489fd8320f7e872c6572.png)
 
