--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
@@ -3,8 +3,8 @@
 ## 操作步骤
 
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
-2. 在左侧菜单栏中单击【任务列表】。
-3. 单击任务列表页面上方的【新建任务】按钮。
+2. 在左侧菜单栏中单击**任务列表**。
+3. 单击任务列表页面上方的**新建任务**按钮。
 4. 根据下列说明配置基本信息。
 <table>
 <tr>
