--- a/product/视频服务/移动直播/基础功能/连麦互动/直播连麦.md
+++ b/product/视频服务/移动直播/基础功能/连麦互动/直播连麦.md
@@ -89,7 +89,7 @@
 
 [](id:step_live1)
 ### 1. 主播 RTC 推流
-主播 A 开始推流，调用 `V2TXLivePusher` 组件开始主播 A 的推流。URL 拼装方案请参见 [自主拼装 RTC 连麦/PK URL](https://cloud.tencent.com/document/product/454/7915#rtc_push)。
+主播 A 开始推流，调用 `V2TXLivePusher` 组件开始主播 A 的推流。URL 拼装方案请参见 [如何拼装 URL](https://cloud.tencent.com/document/product/454/7915#rtc_push)。
 <dx-codeblock>
 ::: java java
 V2TXLivePusher pusher = new V2TXLivePusherImpl(this, V2TXLiveMode.TXLiveMode_RTC);
@@ -105,7 +105,7 @@ NSString *pushURLA = @"trtc://cloud.tencent.com/push/streamid?sdkappid=140018888
 
 [](id:step_live2)
 ### 2. 观众 CDN 拉流
-所有观众观看主播 A 直播，调用 `V2TXLivePlayer` 开始播放主播 A 的流。URL 拼装方案请参见 [自主拼装 RTC 连麦/PK URL](https://cloud.tencent.com/document/product/454/7915#rtc_play)。
+所有观众观看主播 A 直播，调用 `V2TXLivePlayer` 开始播放主播 A 的流。URL 拼装方案请参见 [如何拼装 URL](https://cloud.tencent.com/document/product/454/7915#rtc_play)。
 <dx-codeblock>
 ::: java java
 V2TXLivePlayer player = new V2TXLivePlayerImpl(mContext);
