--- a/product/监控与管理/云拨测（新）/产品简介/应用场景.md
+++ b/product/监控与管理/云拨测（新）/产品简介/应用场景.md
@@ -10,7 +10,7 @@
 
 通过主动式拨测定位 CDN 的服务质量，并提供详细数据支撑，如：使用 CDN 前后的性能对比、CDN 的服务质量等，以此为依据对 CDN 服务进行调优，优化业务的用户体验。
 
-### 防劫持/防篡改
+### 防劫持和防篡改
 
 对“域名劫持、流量劫持、页面篡改”等非法劫持行为并告警，协助企业与运营商交涉，保护应用流量和品牌形象。
 
