--- a/product/监控与管理/云拨测（新）/产品简介/应用场景.md
+++ b/product/监控与管理/云拨测（新）/产品简介/应用场景.md
@@ -1,4 +1,4 @@
-﻿### 服务质量优化
+### 服务质量优化
 
 从全球模仿用户访问服务，获取各种业务场景（如在线视频体验、电商网站性能、API 测试等）的服务质量指标 。您可以用云拨测获得页面性能、端口时延、浏览器事件、视频卡顿、劫持篡改、应用错误等指标数据。您还可以配置实时告警，在相关指标异常时及时发送告警通知，优化服务质量。
 
