--- a/product/计算与网络/云联网/操作指南/启用无效路由.md
+++ b/product/计算与网络/云联网/操作指南/启用无效路由.md
@@ -1,5 +1,6 @@
 本文将帮助您了解云联网路由的启用操作
 
+## 操作步骤
 1. 登录 [路由表控制台](https://console.cloud.tencent.com/vpc/route?rid=1) ， 在列表中，单击需要调整的路由表 ID，进入详情页。
 2. 找到需要启用的路由策略所在行，单击**启用路由**。若启用该路由与其他路由产生冲突，请先禁用或删除冲突路由。
 ![](https://main.qcloudimg.com/raw/a47123003832456e787ea3da4c3796f8.png)
