--- a/product/安全服务/数字身份管控平台公众版/操作指南/用户目录管理/设置默认用户目录.md
+++ b/product/安全服务/数字身份管控平台公众版/操作指南/用户目录管理/设置默认用户目录.md
@@ -2,7 +2,7 @@
 用户目录是数字身份管控平台（公众版）的一级目录，所有的用户数据、用户自定义属性数据、应用数据、认证源数据均以用户目录隔离。本文将为您介绍如何在数字身份管控平台（公众版）控制台，设置默认用户目录，可以在进入系统后，优先展示该用户目录。
 
 ## 操作步骤
-1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏选择【概览】，进入概览页面。
+1. 登录 [数字身份管控平台（公众版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏选择【概览】，进入概览页面。
 2. 在概览页面，单击界面右上方的【管理用户目录】，进入管理详情页面。
 ![](https://main.qcloudimg.com/raw/4a6ede8bc019f767de5d96bc404a8188.png)
 3. 在管理详情页面，单击![](https://main.qcloudimg.com/raw/1ac336a5dc7945726e71a9da56cdcdbb.png)后，单击【设置为默认用户目录】。
