--- a/product/安全服务/数字身份管控平台公众版/操作指南/用户目录管理/删除用户目录.md
+++ b/product/安全服务/数字身份管控平台公众版/操作指南/用户目录管理/删除用户目录.md
@@ -6,7 +6,7 @@
 删除用户目录前，需要将开启的应用关闭才能进行删除。
 
 ## 操作步骤
-1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏选择【概览】，进入概览页面。
+1. 登录 [数字身份管控平台（公众版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏选择【概览】，进入概览页面。
 2. 在概览页面，单击界面右上方的【管理用户目录】，进入管理详情页面。
 ![](https://main.qcloudimg.com/raw/4a6ede8bc019f767de5d96bc404a8188.png)
 3. 在管理详情页面，单击![](https://main.qcloudimg.com/raw/1ac336a5dc7945726e71a9da56cdcdbb.png)后，单击【删除】。
