--- a/product/安全服务/数字身份管控平台公众版/操作指南/用户管理/编辑用户属性.md
+++ b/product/安全服务/数字身份管控平台公众版/操作指南/用户管理/编辑用户属性.md
@@ -3,7 +3,7 @@
 
 ## 操作步骤
 
-1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【用户管理】>【用户管理】,进入用户管理页面。
+1. 登录 [数字身份管控平台（公众版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【用户管理】>【用户管理】,进入用户管理页面。
 2. 在用户管理页面，单击操作列的【编辑用户】，弹出编辑用户弹窗。
 ![](https://main.qcloudimg.com/raw/17928686aa70480f63dd321302a1e984.png)
 3. 在编辑用户弹窗，编辑用户信息后，单击【确定】。
