--- a/product/移动与通信/短信/审核标准/审核驳回原因/常见签名驳回原因与处理建议.md
+++ b/product/移动与通信/短信/审核标准/审核驳回原因/常见签名驳回原因与处理建议.md
@@ -19,23 +19,23 @@
    <tr>
       <td style="text-align:center" rowspan='9'>资质材料错误</td>
       <td rowspan='5'>提供证明材料与签名类型对于要求不匹配</td>
-      <td>个人用户申请自用签名证明材料错误</td>
+      <td><b>个人用户</b>申请自用签名证明材料错误</td>
       <td>不同的签名类型要求提供的证明材料不同，<a href="https://cloud.tencent.com/document/product/382/39022#.E4.B8.AA.E4.BA.BA.E8.AE.A4.E8.AF.81.E7.94.A8.E6.88.B7">个人认证用户自用签名材料清单。</a></td>
    </tr>
    <tr>
-      <td>企业用户申请自用签名证明材料错误</td>
+      <td><b>企业用户</b>申请自用签名证明材料错误</td>
       <td>不同的签名类型要求提供的证明材料不同，<a href="https://cloud.tencent.com/document/product/382/39022#.E4.BC.81.E4.B8.9A.E8.AE.A4.E8.AF.81.E7.94.A8.E6.88.B7">企业认证用户自用签名材料清单。</a></td>
    </tr>
    <tr>
-      <td>个人/企业用户申请他用签名证明材料错误</td>
+      <td>个人/企业用户申请<b>他用签名</b>证明材料错误</td>
       <td>他用签名是指为非本账号认证的企事业单位申请签名。他用签名需要提供的 <a href="https://cloud.tencent.com/document/product/382/39022#.E8.AF.81.E6.98.8E.E6.96.87.E4.BB.B6.E6.B8.85.E5.8D.95.EF.BC.88.E4.BB.96.E7.94.A8.E7.AD.BE.E5.90.8D.EF.BC.89">证明材料清单。</a>
    </tr>
    <tr>
-      <td>他用签名，营业执照提供错误</td>
+      <td><b>他用签名</b>，营业执照提供错误</td>
       <td>涉及第三方权益的签名（他用签名），需提供的是签名归属方的营业执照。</td>
    </tr>
    <tr>
-      <td>他用签名，未提供委托授权书</td>
+      <td><b>他用签名</b>，未提供委托授权书</td>
       <td>签名类型为他用，需要提供腾讯云标准格式授权书，请下载 <a href="https://cloud.tencent.com/document/product/382/39022#.E5.A7.94.E6.89.98.E6.8E.88.E6.9D.83.E4.B9.A6.E5.A1.AB.E5.86.99.E6.8C.87.E5.BC.95">授权书模板</a> 填写盖章后再提交申请。</td>
    </tr>
    <tr>
@@ -56,8 +56,7 @@
    <tr>
       <td>证明材料格式错误</td>
       <td>所有证明文件必须为原件的图片，即图片中公章必须为红色。
-所有证明材料必须在有效期内且未涂改。
-证明文件必须为.jpg、.jpeg或.png格式的图片，每张图片不大于5MB。
+<br>所有证明材料必须在有效期内且未涂改。</br>证明文件必须为.jpg、.jpeg或.png格式的图片，每张图片不大于5MB。</br>
 申请他用签名时，需要使用的授权委托书必须使用短信服务提供的标准 <a href="https://attachment-1252075342.cos.ap-guangzhou.myqcloud.com/%E6%8E%88%E6%9D%83%E5%A7%94%E6%89%98%E4%B9%A6.docx"> 授权委托书 </a>。</td>
    </tr>
 </table>
