--- a/product/安全服务/数字身份管控平台公众版/操作指南/应用管理/应用配置.md
+++ b/product/安全服务/数字身份管控平台公众版/操作指南/应用管理/应用配置.md
@@ -2,7 +2,7 @@
 当应用的基本信息变动时，需要修改该信息。下面将为您详细介绍如何修改应用的基本信息，并配置应用的参数和使用流程。
 
 ## 操作步骤
-1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏选择【应用管理】,进入应用管理页面。
+1. 登录 [数字身份管控平台（公众版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏选择【应用管理】,进入应用管理页面。
 2. 在应用管理页面，单击操作列的【配置】，进入应用配置的基本信息页面。
 >?应用状态为关闭，才能进行配置和删除操作。
 >
