--- a/product/计算与网络/云联网/操作指南/启用无效路由.md
+++ b/product/计算与网络/云联网/操作指南/启用无效路由.md
@@ -1,4 +1,4 @@
-本文将帮助您了解云联网路由的启用操作
+本文将帮助您了解云联网路由的启用操作。
 
 ## 操作步骤
 1. 登录 [路由表控制台](https://console.cloud.tencent.com/vpc/route?rid=1) ， 在列表中，单击需要调整的路由表 ID，进入详情页。
