--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
@@ -1,4 +1,4 @@
-﻿文件传输（上传/下载)场景通过文件上传/下载，获取应用的数据资源的传输速率，反映真实的带宽的波动性。本文将为您介绍如何新建传输任务。
+文件传输（上传/下载）场景通过文件上传/下载，获取应用的数据资源的传输速率，反映真实的带宽的波动性。本文将为您介绍如何新建传输任务。
 
 ## 操作步骤
 
