--- a/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
@@ -2,7 +2,7 @@
 ## 2021-07
 <table>
 <tr><th width=20%>动态名称</th><th width=48%>动态描述</th><th width=15%>发布时间</th><th width=20%>相关文档</th></tr>
-<tr><td>域名接入功能优化</td><td>域名接入功能支持同一域名两种协议同时接入	</td><td>2021-08-26</td><td><a href="https://cloud.tencent.com/document/product/1014/44106">防护等级与清洗阈值</a>
+<tr><td>域名接入功能优化</td><td>域名接入功能支持同一域名两种协议同时接入	</td><td>2021-08-26</td><td><a href="https://cloud.tencent.com/document/product/1014/44106">域名接入</a>
 </table>
 
 ## 2021-07
