--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建音视频体验任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建音视频体验任务.md
@@ -57,8 +57,8 @@
 
 由于机房（IDC）和网民（LastMile）网络环境不同，机房（IDC）比网民（LastMile）更稳定。
 
-- 若是要监测业务的可用性，可以选择比较稳定的机房 IDC
-- 若要看终端用户的访问体验、网络情况等建议多选网民 LastMile/手机端，可以模拟终端用户访问应用的体验
+- 若是要监测业务的可用性，可以选择比较稳定的机房 IDC。
+- 若要看终端用户的访问体验、网络情况等建议多选网民 LastMile/手机端，可以模拟终端用户访问应用的体验。
 </dx-alert>
 6. 配置拨测参数（可选），系统默认为您配置常用的拨测参数，您也可以自定义拨测规则。配置说明如下：
 <table>
@@ -92,7 +92,7 @@
 </tr>
 <tr>
 <td> 自定义 Host</td>
-<td> 支持按 IP 地址轮询或随机监测，多个IP请用半角逗号分隔符，<br>例如：
+<td> 支持按 IP 地址轮询或随机监测，多个 IP 请用半角逗号分隔符，<br>例如：
 <ul style = "margin-bottom: 0px;">
 <li>IPv4：<code>192.168.2.1,192.168.2.5:img.a.com&#124;192.168.2.1?]:img.a.com&#124;</code></li><li>IPv6：<code>[0:0:0:0:0:0:0:1][8080],[0:0:0:0:0:0:0:2][8081]:www.a.com|]</code></li></ul>
 </td>
@@ -100,7 +100,7 @@
 </tr>
 <tr>
 <td> 资源劫持白名单</td>
-<td> 填写任务DNS IP白名单，监测过程中发现白名单内的DNS IP 将认定为DNS劫持信息</td>
+<td> 填写任务 DNS IP 白名单，监测过程中发现白名单内的DNS IP 将认定为DNS劫持信息</td>
 <td> -</td>
 </tr>
 <tr>
