--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建网络质量任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建网络质量任务.md
@@ -1,4 +1,4 @@
-网络质量监测针对应用网络稳定性，路由稳定性、DNS 解析正确率，包括ICMP时延和丢包率等进行监控。本文将为您介绍如何新建网络质量任务。
+网络质量监测针对应用网络稳定性，路由稳定性、DNS 解析正确率，包括 ICMP 时延和丢包率等进行监控。本文将为您介绍如何新建网络质量任务。
 
 ## 操作步骤
 
@@ -58,8 +58,8 @@
 
 由于机房（IDC）和网民（LastMile）网络环境不同，机房（IDC）比网民（LastMile）更稳定。
 
-- 若是要监测业务的可用性，可以选择比较稳定的机房 IDC
-- 若要看终端用户的访问体验、网络情况等建议多选网民 LastMile/手机端，可以模拟终端用户访问应用的体验
+- 若是要监测业务的可用性，可以选择比较稳定的机房 IDC。
+- 若要看终端用户的访问体验、网络情况等建议多选网民 LastMile/手机端，可以模拟终端用户访问应用的体验。
 </dx-alert>
 6. 配置拨测参数（可选），系统默认为您配置常用的拨测参数，您也可以自定义拨测规则。配置说明如下：
   <table>
@@ -154,7 +154,7 @@
 DNS 劫持白名单
 </td>
 <td>
-当任务的目标IP在DNS白名单内，则认定为没有发生了DNS劫持。WAP 浏览不支持白名单劫持。
+当任务的目标 IP 在 DNS 白名单内，则认定为没有发生了 DNS 劫持。WAP 浏览不支持白名单劫持。
 </td>
 <td>
 -
@@ -165,7 +165,7 @@ DNS 劫持白名单
 DNS 劫持黑名单
 </td>
 <td>
-当任务的目标IP在DNS黑名单内，则认定为发生了DNS劫持。WAP 浏览不支持白名单劫持。
+当任务的目标 IP 在 DNS 黑名单内，则认定为发生了 DNS 劫持。WAP 浏览不支持白名单劫持。
 </td>
 <td>
 -
