--- a/product/监控与管理/云拨测（新）/操作指南/恢复拨测任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/恢复拨测任务.md
@@ -1,4 +1,4 @@
-﻿恢复拨测任务后，拨测计费也将会恢复。您可以参考下文恢复拨测任务。
+恢复拨测任务后，拨测计费也将会恢复。您可以参见下文恢复拨测任务。
 
 ## 操作步骤
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
