--- a/product/监控与管理/云拨测（新）/操作指南/暂停拨测任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/暂停拨测任务.md
@@ -1,4 +1,4 @@
-﻿暂停拨测任务后，多维分析页面将无法正常暂时拨测数据，拨测计费也会停止。您可以参考下文暂停拨测任务。
+暂停拨测任务后，多维分析页面将无法正常暂时拨测数据，拨测计费也会停止。您可以参见下文暂停拨测任务。
 
 ## 操作步骤
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
