--- a/product/监控与管理/云拨测（新）/常见问题/云拨测旧版文档入口.md
+++ b/product/监控与管理/云拨测（新）/常见问题/云拨测旧版文档入口.md
@@ -1,4 +1,4 @@
-单击查看云拨测旧版文档
+单击查看云拨测旧版文档：
 
 - [产品概述](https://cloud.tencent.com/document/product/280)
 - [可用性监控](https://cloud.tencent.com/document/product/280/30287)
