--- a/product/监控与管理/云拨测（新）/操作指南/任务列表/任务列表.md
+++ b/product/监控与管理/云拨测（新）/操作指南/任务列表/任务列表.md
@@ -1,4 +1,4 @@
-﻿云拨测任务列表用于管理您新建的拨测任务，本文将为您介绍如何编辑、删除、暂停和恢复拨测任务。
+云拨测任务列表用于管理您新建的拨测任务，本文将为您介绍如何编辑、删除、暂停和恢复拨测任务。
 
 ## 操作前提
 1. 登录 [云拨测控制台](https://console.cloud.tencent.com/cat)。
@@ -12,14 +12,14 @@
 
 ### 删除拨测任务
 1. 在任务列表页操作列中单击**更多** > **删除**。
-2. 在弹框中单击 **确定**即可。
+2. 在弹框中单击**确定**即可。
 
 ### 暂停拨测任务
 1. 在任务列表页操作列中单击**更多** > **暂停**。
-2. 在弹框中单击 **确定**即可。
+2. 在弹框中单击**确定**即可。
 >?暂停拨测任务后，将会停止收费，拨测任务也无法正常进行。
 
 ### 恢复拨测任务
 1. 在任务列表页操作列中单击**更多** > **恢复**。
-2. 在弹框中单击 **确定**即可。
+2. 在弹框中单击**确定**即可。
 >?恢复拨测任务后，将会正常计费。
