--- a/product/计算与网络/CKafka/常见问题/消息问题.md
+++ b/product/计算与网络/CKafka/常见问题/消息问题.md
@@ -28,24 +28,24 @@
 kafka的消息删除机制会导致某些业务场景出现过期消息没有及时删除的情况，如果对机制不了解容易产生疑惑，具体问题如下：
 
 这里分区0和分区7的消息时间戳存在明显差距，分区0的过期消息没有被及时删除，如下图所示：
-
-![](https://main.qcloudimg.com/raw/75f2cfcbb69ae2aaf91182b6a2495101.png)
-
-![](https://main.qcloudimg.com/raw/8b27eebec4dc6f8f5dd893aa71c0dd09.png)
+- 分区为0：
+![](https://main.qcloudimg.com/raw/15259a044edd174cbe609a9a95e43ea2.png)
+- 分区为7：
+![](https://main.qcloudimg.com/raw/bda384e0ed20e043f9416481e6d6d2a5.png)
 
 **Kafka消息删除机制**
 
-Kafka数据存储是以 Topic，分区，数据段三个维度实际落盘存储的，消息数据删除的条件如下：
+Kafka数据存储是以 Topic、分区、数据段三个维度实际落盘存储的，消息数据删除的条件如下：
 
 1. 消息数据根据保留时间进行删除，删除是以数据段为单位的。
-2. 每个数据段当前是设置为1G 大小，达到1G 后滚动生成新的数据段。
+2. 每个数据段当前是设置为1GB大小，达到1GB后滚动生成新的数据段。
 3. 数据段内的所有消息都过期才会删除该数据段。
-4. 如果数据段内有一行消息在保留时间内，即比如段文件的最后一行是在保留时间内，这个段文件就不会被删除。
+4. 如果数据段内有一行消息在保留时间内，即例如段文件的最后一行是在保留时间内，这个段文件就不会被删除。
 
-由于某些原因导致消息写入有倾斜，数据写入集中在某些分区，比如分区7，某些分区数据很少，比如分区0。此时分区0的数据段大小未达到1G，没发生滚动，但整个段内有数据在保留时间内，所以分区0中的消息就不会被删除。
+由于某些原因导致消息写入有倾斜，数据写入集中在某些分区，例如分区7，某些分区数据很少，例如分区0。此时分区0的数据段大小未达到1GB，没发生滚动，但整个段内有数据在保留时间内，所以分区0中的消息就不会被删除。
 
 
 
 ## 是否支持自动调整消息保留时间？
 
-CKafka 支持添加动态消息保留策略功能，设置数据动态保留策略后，当磁盘空间使用率到达一定的比例后，会自动向前过期一定比例的数据，避免遇到用户消息猛增的情况，磁盘空间满了之后，则无法正常生产和消费。具体操作方式参考[添加动态消息保留策略](https://cloud.tencent.com/document/product/597/53850)。
+CKafka 支持添加动态消息保留策略功能，设置数据动态保留策略后，当磁盘空间使用率到达一定的比例后，会自动向前过期一定比例的数据，避免遇到用户消息猛增的情况，磁盘空间满了之后，则无法正常生产和消费。具体操作方式参考 [添加动态消息保留策略](https://cloud.tencent.com/document/product/597/53850)。
