--- a/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
+++ b/product/监控与管理/云拨测（新）/操作指南/新建任务/新建文件传输任务.md
@@ -13,7 +13,7 @@
 </tr>
 <tr>
 <td> 任务类型</td>
-<td> 选择 PC 端或移动端传输任务类型，再选择上传或下载类型。</td>
+<td> 选择 PC 端或移动端的“文件传输”任务类型，再选择上传或下载类型。</td>
 </tr>
 <tr>
 <td> 拨测地址</td>
