--- a/product/域名与网站/网站备案/备案小程序流程指引/变更备案.md
+++ b/product/域名与网站/网站备案/备案小程序流程指引/变更备案.md
@@ -35,7 +35,7 @@
 </tr>
 <tr>
 <td rowspan="6"><a href="https://cloud.tencent.com/document/product/243/18908">云服务资源</a>（选择其中一个条件即可）</td>
-<td><ul style="margin: 0;">
+<td>
 <b>云服务器（CVM）</b>
 </td>
 <td>通过云服务器备案，需要先购买腾讯云中国大陆地区有公网 IP 的服务器，计费模式需为包年包月，购买包月3个月及以上（包含续费）且备案期间剩余有效期需大于（含）1个月的云服务器。</td>
@@ -72,9 +72,9 @@
 1. 请使用微信扫一扫小程序码进入备案小程序。
 ![](https://main.qcloudimg.com/raw/f4cb3b91fdcac1b1d4274efcbd955c2e.jpg)
 2. 已登录您的腾讯云账号。
-3. 单击主体信息右下方的【更多操作】，可显示主体相关操作按钮。如下图所示：
+3. 单击主体信息右下方的**更多操作**，可显示主体相关操作按钮。如下图所示：
 ![](https://main.qcloudimg.com/raw/cd8960402ea8332374aae8ca6b3b3279.jpg)
-4. 单击【变更备案】，则进入变更备案流程。
+4. 单击**变更备案**，则进入变更备案流程。
 
 ### 二. 修改主体信息
 1. 修改主体信息。如下图所示：
@@ -153,13 +153,13 @@
 >- 审核专员会通过您的手机号码联系您沟通确认订单问题，请确保您填写的联系方式真实且可接通。若审核专员首次拨打电话未联系到您，会在1个小时左右再次与您联系。若仍未能与您取得联系，您的备案申请将被驳回。
 >- 个人备案时，若您备案中主办者的手机号未与账号绑定手机一致，您可以通过 [修改绑定手机号](https://cloud.tencent.com/document/product/378/17357) 调整一致。
 >
-3. 单击【确定】，进入修改网站信息流程。
+3. 单击**确定**，进入修改网站信息流程。
 
 ### 三. 修改网站信息
 1. 单击需要修改信息的网站。如下图所示：
 ![添加网站](https://main.qcloudimg.com/raw/f21750ae15e5900ec692924f3e416272.png)
-2. 进入【网站信息】页面，修改相关信息，并进行保存。
-3. 单击【下一步】，进入核验及上传材料流程。
+2. 进入**网站信息**页面，修改相关信息，并进行保存。
+3. 单击**下一步**，进入核验及上传材料流程。
 
 
 ### 四. 进行视频核验及材料上传
