--- a/product/域名与网站/网站备案/备案小程序流程指引/变更网站.md
+++ b/product/域名与网站/网站备案/备案小程序流程指引/变更网站.md
@@ -69,14 +69,14 @@
 1. 请使用微信扫一扫小程序码进入备案小程序。
 ![](https://main.qcloudimg.com/raw/f4cb3b91fdcac1b1d4274efcbd955c2e.jpg)
 2. 已登录您的腾讯云账号。
-3. 单击网站信息右下方的【更多操作】，可显示网站相关操作按钮。如下图所示：
+3. 单击网站信息右下方的**更多操作**，可显示网站相关操作按钮。如下图所示：
 ![](https://main.qcloudimg.com/raw/65fab7d8149576fb987c37e7548925c1.jpg)
-4. 单击【变更网站】，进入变更网站流程。
+4. 单击**变更网站**，进入变更网站流程。
 
 ### 二. 修改网站信息
-1. 进入【网站信息】管理页面，修改相关信息。如下图所示：
+1. 进入**网站信息**管理页面，修改相关信息。如下图所示：
 ![](https://main.qcloudimg.com/raw/93d0f025abf0a2a8e4bc37997f323ad3.png)
-2. 单击【保存网站信息】，进入核验及上传材料流程。
+2. 单击**保存网站信息**，进入核验及上传材料流程。
 
 ### 三. 进行视频核验及材料上传
 1. 请**网站负责人**根据页面指引完成视频核验流程。
@@ -91,7 +91,7 @@
  
 
 ### 四. 核对信息并提交审核
-1. 请仔细核对您的备案信息，确认无误后，阅读和勾选**阅读并同意《相关条款》和《腾讯云隐私声明》**，并单击【提交】。如下图所示：
+1. 请仔细核对您的备案信息，确认无误后，阅读和勾选**阅读并同意《相关条款》和《腾讯云隐私声明》**，并单击**提交**。如下图所示：
 ![](https://main.qcloudimg.com/raw/447da2c0a28691f62b858b8d8797cd5e.jpg)
 >! 审核专员会在1 - 2个工作日内进行审核并电话联系您沟通确认订单问题，请确保您填写的联系方式真实且可接通。若审核专员首次拨打电话未联系到您，会在1个小时左右再次与您联系。若仍未能与您取得联系，您的备案申请将被驳回。
  - 若初审通过，初审结果将会在1 - 2个工作日之内通过您提供的电子邮件和电话号码发送给您。
