--- a/product/测试文件夹/22/1/2.md
+++ b/product/测试文件夹/22/1/2.md
@@ -2,9 +2,9 @@
 
 容器服务 TKE 基于 [Custom Metrics API](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/instrumentation/custom-metrics-api.md) 支持许多用于弹性伸缩的指标，涵盖 CPU、内存、硬盘、网络以及 GPU 相关的指标，覆盖绝大多数的 HPA 弹性伸缩场景，详细列表请参见 [自动伸缩指标说明](https://cloud.tencent.com/document/product/457/38929)。
 
-若用户需要针对自定义的监控指标或更低采样频率的监控数据来实现自动扩缩容，则可以将云原生监控采集的指标数据用于弹性伸缩，云原生监控服务是腾讯云提供的适配容器场景的prometheus监控服务，支持默认采集k8s相关指标，支持采集用户自定义的监控指标，指标的默认采集频率为15s。
+若用户需要针对自定义的监控指标或更低采样频率的监控数据来实现自动扩缩容，可以将云原生监控采集的指标数据用于弹性伸缩，云原生监控服务是腾讯云提供的适配容器场景的 Prometheus 监控服务，支持默认采集 K8s 相关指标、用户自定义的监控指标，指标默认采集频率为15s。
 
-下面介绍如何将云原生监控采集的指标用于弹性伸缩。
+下文介绍如何将云原生监控采集的指标用于弹性伸缩。
 
 ## 前提条件
 
@@ -12,24 +12,22 @@
 - 已创建云原生监控实例并完成集群关联，若还未开通云原生监控，则参见[云原生监控](https://console.cloud.tencent.com/tke2/prometheus/list?rid=1)。
 - 已安装 [Helm](https://helm.sh/docs/intro/install/)。
 
+
 ## 操作步骤
 
 ### 通过云原生监控暴露监控指标
 
-1. 在业务程序中暴露自定义指标；
-2. 部署业务应用至集群；
-3. 在云原生监控控制台关联集群并配置数据采集规则，详情参考[数据采集配置](https://cloud.tencent.com/document/product/457/49891)；
+1. 在业务程序中暴露自定义指标。
+2. 部署业务应用至集群。
+3. 在云原生监控控制台关联集群并配置数据采集规则，详情请参见 [数据采集配置](https://cloud.tencent.com/document/product/457/49891)。
+
 
 ### 安装 Prometheus-adapter
 
-1. 确认配置参数，创建value.yaml.
-
-   adapter连接的prometheus信息，主要是url和端口，默认值是http://prometheus.default.svc，端口是9090，当使用云原生监控时，对应的信息需要修改成云原生监控控制台【基本信息】中提供的数据查询地址，如下图所示：
-
-   ![](https://main.qcloudimg.com/raw/77711ef5b96a22db1d88dfabd33154bc.jpg)
-
-   自定义rules的配置主要是配置指标的发现规则，指标与kubernetes资源对对应关系，在api中指标对暴露名称以及对应的查询语句，详细配置可参考https://github.com/kubernetes-sigs/prometheus-adapter/blob/master/docs/config.md，完整的value.yaml如下图所示：
-
+1. 确认配置参数，创建 value.yaml。
+   adapter 连接的 prometheus 信息，主要是 URL 和端口，默认值分别是`http://prometheus.default.svc`和9090，当使用云原生监控时，对应的信息需要修改成 [云原生监控控制台](https://console.cloud.tencent.com/tke2/prometheus) **基本信息**中提供的数据查询地址，如下图所示：
+	 ![](https://main.qcloudimg.com/raw/402b801be13395664d67e580af237fab.png)
+   自定义 rules 的配置主要是配置指标的发现规则，指标与 kubernetes 资源对应，在 API 中指标对暴露名称以及对应的查询语句，详细配置可参见 [prometheus-adapter](https://github.com/kubernetes-sigs/prometheus-adapter/blob/master/docs/config.md)，完整的 value.yaml 如下所示：
    ```yaml
    rules:
    # this rule matches cumulative cAdvisor metrics measured in seconds
@@ -55,41 +53,37 @@
      url: http://192.xx.x.x # 替换为上文中的数据接口地址 (不写端口)
      port: 9090
    ```
-
 2. 执行以下 Helm 命令安装 prometheus-adapter，示例如下：
+>!安装前需要删除 TKE 已经注册的 Custom Metrics API，删除命令如下：
+```sh
+kubectl delete apiservice v1beta1.custom.metrics.k8s.io
+```
+	```sh
+	helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+	helm repo update
+	# Helm 3
+	helm install prometheus-adapter prometheus-community/prometheus-adapter -f values.yaml
+	# Helm 2
+	# helm install --name prometheus-adapter prometheus-community/prometheus-adapter -f values.yaml
+	```
+3. 部署过程可能因为拉取 k8s.gcr.io 镜像超时，可以执行以下命令手动修改 proetheus-adapter 的 image：
+	```sh
+	kubectl edit deploy prometheus-adapter
+	# 将image修改为willdockerhub/prometheus-adapter:v0.9.0
+	```
 
-   > 注意：
-   >
-   > 安装前需要删除 TKE 已经注册的 Custom Metrics API，删除命令如下：
-   > `kubectl delete apiservice v1beta1.custom.metrics.k8s.io`
-
-   ```bash
-   helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-   helm repo update
-   # Helm 3
-   helm install prometheus-adapter prometheus-community/prometheus-adapter -f values.yaml
-   # Helm 2
-   # helm install --name prometheus-adapter prometheus-community/prometheus-adapter -f values.yaml
-   ```
-
-   部署过程可能因为拉取k8s.gcr.io镜像超时，可以手动修改proetheus-adapter的image：
-
-   ```
-   kubectl edit deploy prometheus-adapter
-   # 将image修改为willdockerhub/prometheus-adapter:v0.9.0
-   ```
 
 ### 测试验证
 
-若安装正确，执行以下命令，可以通过下面命令查询自定义指标。
-
-```bash
-$ kubectl get --raw /apis/custom.metrics.k8s.io/v1beta1
+若安装正确，可用执行以下命令查询自定义指标：
+```sh
+kubectl get --raw /apis/custom.metrics.k8s.io/v1beta1
 ```
+
 
 ### 测试 HPA
 
-使用自定义指标测试HPA是否生效，如利用httpserver_requests_qps进行扩所容，假如设置每个业务 Pod 的平均 QPS 达到50时将触发扩容，最小副本为1个，最大副本为1000个，则配置示例如下：
+使用自定义指标测试 HPA 是否生效，如利用 httpserver_requests_qps 进行扩所容，假如设置每个业务 Pod 的平均 QPS 达到50时触发扩容，最小副本为1个，最大副本为1000个，配置示例如下：
 
 ```yaml
 apiVersion: autoscaling/v2beta2
@@ -114,9 +108,9 @@ spec:
        type: AverageValue
 ```
 
-使用Apache ab进行压测，参考资源定义如下：
+使用 Apache ab 进行压测，参考资源定义如下：
 
-```
+```yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -139,15 +133,14 @@ spec:
 ```
 
 执行以下命令对业务进行压测：
-
-```
+```sh
 # 进入ab容器终端
 kubectl exec -it abcontainer-xxx -n {namespace} /bin/sh
 # 执行压测命令
 ab -c 10000 -n 12000 http://xxx/xxx
 ```
 
-观察是否自动扩容。示例如下：
+执行以下命令观察是否自动扩容。示例如下：
 
 ```bash
 $ kubectl get hpa
