--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/概述.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/概述.md
@@ -1,6 +1,6 @@
-﻿参数模板是一组IP地址或协议端口参数的集合，是添加安全组规则的一种快捷方式。
+参数模板是一组IP地址或协议端口参数的集合，是添加安全组规则的一种快捷方式。
 
-通常在添加安全组规则时，需要输入IP来源、协议端口，当一组IP地址或协议端口有相同的安全组策略需求时，可将一组IP地址或协议端口保存为参数模板，在安全组添加规则时，直接选择提前定义好的参数模板即可。如后续有频繁编辑IP地址或协议端口的需求，也可以直接在参数模板中统一管理，而无需修改安全组规则或新建安全组，从而提高安全组使用效率。
+通常在添加安全组规则时，需要输入 IP 来源、协议端口，当一组 IP 地址或协议端口有相同的安全组策略需求时，可将一组 IP 地址或协议端口保存为参数模板，在安全组添加规则时，直接选择提前定义好的参数模板即可。如后续有频繁编辑 IP 地址或协议端口的需求，也可以直接在参数模板中统一管理，而无需修改安全组规则或新建安全组，从而提高安全组使用效率。
 
 腾讯云支持如下四种类型的参数模板：
 - IP 地址：也称为 IP 地址对象，是一组IP地址的集合，支持单个 IP、CIDR、IP 范围。
