--- a/product/存储与CDN/对象存储 4.0/开发者指南/管理数据/清单功能/清单功能概述.md
+++ b/product/存储与CDN/对象存储 4.0/开发者指南/管理数据/清单功能/清单功能概述.md
@@ -1,6 +1,6 @@
 ## 什么是清单
 
-清单是一种帮助用户管理存储桶中对象的功能，可以有计划地取代对象存储同步 List API 操作。对象存储 COS 可根据用户的清单任务配置，每天或者每周定时扫描用户存储桶内指定的对象或拥有相同对象前缀的对象，并输出一份清单报告，以 CSV 格式的文件存储到用户指定的存储桶中。文件中会列出存储的对象及其对应的元数据，并根据用户的配置信息，记录用户所需的对象属性信息。
+清单是一种帮助用户管理存储桶中对象的功能，可以有计划地取代对象存储同步 List API 操作。对象存储（Cloud Object Storage，COS）可根据用户的清单任务配置，每天或者每周定时扫描用户存储桶内指定的对象或拥有相同对象前缀的对象，并输出一份清单报告，以 CSV 格式的文件存储到用户指定的存储桶中。文件中会列出存储的对象及其对应的元数据，并根据用户的配置信息，记录用户所需的对象属性信息。
 
 您可以使用清单功能实现包括但不限于以下基本用途：
 
