--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/专线网关概述.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/专线网关概述.md
@@ -83,4 +83,4 @@
 
 ### 推荐配置
 1. 腾讯云侧：DSR 通过 BGP 协议学习腾讯云到用户 IDC 的路由，下一跳为用户本地路由器。
-2. 用户 IDC 侧：用户本地路由器通过 BGP 协议学习 IDC 到腾讯云 VPC 的路由，下一跳为 2个 DSR 集群的 IP 地址。
+2. 用户 IDC 侧：用户本地路由器通过 BGP 协议学习到腾讯云 VPC 的路由，下一跳为 2个 DSR 集群的 IP 地址。
