--- a/product/测试文件夹/22/1/2.md
+++ b/product/测试文件夹/22/1/2.md
@@ -1,6 +1,6 @@
 ## 操作场景
 
-容器服务 TKE 基于 [Custom Metrics API](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/instrumentation/custom-metrics-api.md) 支持许多用于弹性伸缩的指标，涵盖 CPU、内存、硬盘、网络以及 GPU 相关的指标，覆盖绝大多数的 HPA 弹性伸缩场景，详细列表请参见 [自动伸缩指标说明](https://cloud.tencent.com/document/product/457/38929)。
+容器服务 TKE 基于 [Custom Metrics API](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/instrumentation/custom-metrics-api.md) 支持许多用于弹性伸缩的指标，涵盖 CPU、内存、硬盘、网络、GPU 相关指标和绝大多数 HPA 弹性伸缩场景，详细列表请参见 [自动伸缩指标说明](https://cloud.tencent.com/document/product/457/38929)。
 
 若用户需要针对自定义的监控指标或更低采样频率的监控数据来实现自动扩缩容，可以将云原生监控采集的指标数据用于弹性伸缩，云原生监控服务是腾讯云提供的适配容器场景的 Prometheus 监控服务，支持默认采集 K8s 相关指标、用户自定义的监控指标，指标默认采集频率为15s。
 
@@ -9,7 +9,7 @@
 ## 前提条件
 
 - 已创建1.12或以上版本的集群，详情请参见 [创建集群](https://cloud.tencent.com/document/product/457/32189)。
-- 已创建云原生监控实例并完成集群关联，若还未开通云原生监控，则参见[云原生监控](https://console.cloud.tencent.com/tke2/prometheus/list?rid=1)。
+- 已创建云原生监控实例并完成集群关联，若还未开通云原生监控，请前往 [云原生监控控制台](https://console.cloud.tencent.com/tke2/prometheus/list?rid=1) 进行开通。
 - 已安装 [Helm](https://helm.sh/docs/intro/install/)。
 
 
@@ -25,9 +25,9 @@
 ### 安装 Prometheus-adapter
 
 1. 确认配置参数，创建 value.yaml。
-   adapter 连接的 prometheus 信息，主要是 URL 和端口，默认值分别是`http://prometheus.default.svc`和9090，当使用云原生监控时，对应的信息需要修改成 [云原生监控控制台](https://console.cloud.tencent.com/tke2/prometheus) **基本信息**中提供的数据查询地址，如下图所示：
+   adapter 连接的 Prometheus 信息，主要是 URL 和端口，默认值分别是`http://prometheus.default.svc`和9090，当使用云原生监控时，对应的信息需要修改成 [云原生监控控制台](https://console.cloud.tencent.com/tke2/prometheus) **基本信息**中提供的 Prometheus 数据查询地址，如下图所示：
 	 ![](https://main.qcloudimg.com/raw/402b801be13395664d67e580af237fab.png)
-   自定义 rules 的配置主要是配置指标的发现规则，指标与 kubernetes 资源对应，在 API 中指标对暴露名称以及对应的查询语句，详细配置可参见 [prometheus-adapter](https://github.com/kubernetes-sigs/prometheus-adapter/blob/master/docs/config.md)，完整的 value.yaml 如下所示：
+   自定义 rules 的配置主要是配置指标的发现规则，指标与 Kubernetes 资源对应，在 API 中指标对暴露名称以及对应的查询语句，详细配置可参见 [prometheus-adapter](https://github.com/kubernetes-sigs/prometheus-adapter/blob/master/docs/config.md)，完整的 value.yaml 如下所示：
    ```yaml
    rules:
    # this rule matches cumulative cAdvisor metrics measured in seconds
@@ -62,14 +62,14 @@ kubectl delete apiservice v1beta1.custom.metrics.k8s.io
 	helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
 	helm repo update
 	# Helm 3
-	helm install prometheus-adapter prometheus-community/prometheus-adapter -f values.yaml
+	helm install prometheus-adapter prometheus-community/prometheus-adapter -f value.yaml
 	# Helm 2
-	# helm install --name prometheus-adapter prometheus-community/prometheus-adapter -f values.yaml
+	# helm install --name prometheus-adapter prometheus-community/prometheus-adapter -f value.yaml
 	```
 3. 部署过程可能因为拉取 k8s.gcr.io 镜像超时，可以执行以下命令手动修改 proetheus-adapter 的 image：
 	```sh
 	kubectl edit deploy prometheus-adapter
-	# 将image修改为willdockerhub/prometheus-adapter:v0.9.0
+	# 将 image 修改为 willdockerhub/prometheus-adapter:v0.9.0
 	```
 
 
@@ -134,7 +134,7 @@ spec:
 
 执行以下命令对业务进行压测：
 ```sh
-# 进入ab容器终端
+# 进入 ab 容器终端
 kubectl exec -it abcontainer-xxx -n {namespace} /bin/sh
 # 执行压测命令
 ab -c 10000 -n 12000 http://xxx/xxx
