--- a/product/域名与网站/网站备案/备案小程序流程指引/注销主体.md
+++ b/product/域名与网站/网站备案/备案小程序流程指引/注销主体.md
@@ -9,12 +9,12 @@
 1. 请使用微信扫一扫小程序码进入备案小程序。
 ![](https://main.qcloudimg.com/raw/f4cb3b91fdcac1b1d4274efcbd955c2e.jpg)
 2. 已登录您的腾讯云账号。
-3. 单击主体信息右下方的【更多操作】，可显示主体相关操作按钮。如下图所示：
+3. 单击主体信息右下方的**更多操作**，可显示主体相关操作按钮。如下图所示：
 ![](https://main.qcloudimg.com/raw/75c1ee2cf3f2f2a39538efc022c6a876.png)
-4. 单击【注销主体】，进入注销主体流程。
-5. 单击【确定】，进入 “验证信息” 页面。如下图所示：
+4. 单击**注销主体**，进入注销主体流程。
+5. 单击**确定**，进入 “验证信息” 页面。如下图所示：
 ![](https://main.qcloudimg.com/raw/106eab8dd1a0597bb5388ccabf0e47bc.png)
-6. 获取验证码并确认信息后，单击【确定】，即可提交至管局审核。
+6. 获取验证码并确认信息后，单击**确定**，即可提交至管局审核。
 
 >! 
 >- 申请一旦提交至通信管局将无法撤回。
