refine java sdk doc

--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
@@ -36,7 +36,7 @@
 <dependency>
        <groupId>com.qcloud</groupId>
        <artifactId>cos_api</artifactId>
-       <version>5.6.52</version>
+       <version>5.6.54</version>
 </dependency>
 ```
 - 源码安装
@@ -75,6 +75,7 @@ COSCredentials cred = new BasicCOSCredentials(secretId, secretKey);
 Region region = new Region("COS_REGION");
 ClientConfig clientConfig = new ClientConfig(region);
 // 这里建议设置使用 https 协议
+// 从 5.6.54 版本开始，默认使用了 https
 clientConfig.setHttpProtocol(HttpProtocol.https);
 // 3 生成 cos 客户端。
 COSClient cosClient = new COSClient(cred, clientConfig);
