--- a/product/域名与网站/网站备案/备案小程序流程指引/批量注销网站.md
+++ b/product/域名与网站/网站备案/备案小程序流程指引/批量注销网站.md
@@ -8,14 +8,14 @@
 1. 请使用微信扫一扫小程序码进入备案小程序。
 ![](https://main.qcloudimg.com/raw/f4cb3b91fdcac1b1d4274efcbd955c2e.jpg)
 2. 已登录您的腾讯云账号。
-3. 单击某个网站信息右下方的【更多操作】，即可显示备案网站相关操作按钮。如下图所示：
+3. 单击某个网站信息右下方的**更多操作**，即可显示备案网站相关操作按钮。如下图所示：
 >! 如果您需要注销主体下所有的网站，将会导致您的主体成为空壳主体，可能影响您后续重新进行备案，建议您直接进行 [注销主体](https://cloud.tencent.com/document/product/243/37410) 操作。
 >
 ![](https://main.qcloudimg.com/raw/7a688fa1d162f5da245559f3b1dbea35.jpeg)
-4. 单击【批量注销网站】，进入 “注销网站须知” 页面，并单击【下一步】。
-5. 进入 “选择网站” 页面，勾选您需要注销的网站，并单击【确定】。如下图所示：
+4. 单击**批量注销网站**，进入 “注销网站须知” 页面，并单击**下一步**。
+5. 进入 “选择网站” 页面，勾选您需要注销的网站，并单击**确定**。如下图所示：
 ![](https://main.qcloudimg.com/raw/e372fb8756191321d74e5146b5621dcd.jpeg)
-6. 进入 “验证备案” 页面，获取并填写验证码后，单击【确定】，即可提交至管局审核。如下图所示：
+6. 进入 “验证备案” 页面，获取并填写验证码后，单击**确定**，即可提交至管局审核。如下图所示：
 ![](https://main.qcloudimg.com/raw/8a159cd9ff8510c10eb8877c8d6fc16b.jpeg)
 
 >! 
