--- a/product/域名与网站/网站备案/备案小程序流程指引/取消接入网站.md
+++ b/product/域名与网站/网站备案/备案小程序流程指引/取消接入网站.md
@@ -10,10 +10,10 @@
 1. 请使用微信扫一扫小程序码进入备案小程序。
 ![](https://main.qcloudimg.com/raw/f4cb3b91fdcac1b1d4274efcbd955c2e.jpg)
 2. 已登录您的腾讯云账号。
-3. 单击网站信息右下方的【更多操作】，可显示网站相关操作按钮，单击【取消接入网站】。如下图所示：
+3. 单击网站信息右下方的**更多操作**，可显示网站相关操作按钮，单击**取消接入网站**。如下图所示：
 ![](https://main.qcloudimg.com/raw/561047a2e9329237ce2aee9b8d52d8b4.jpg)
-4. 在【取消接入须知】页面中，单击【下一步】。
-5. 在【验证备案】页面中，获取验证码并确认信息后，单击【确定】，即可提交至管局审核。如下图所示：
+4. 在**取消接入须知**页面中，单击**下一步**。
+5. 在**验证备案**页面中，获取验证码并确认信息后，单击**确定**，即可提交至管局审核。如下图所示：
 ![](https://main.qcloudimg.com/raw/c939ee31dd219162a365e9bd5e294378.jpg)
 
 >!取消接入管局审核一般3 - 5个工作日，请您耐心等待管局审核。成功办理取消接入网站后，腾讯云会以短信和电子邮件的形式通知您，请注意查收。
