--- a/product/域名与网站/网站备案/备案小程序流程指引/批量取消接入网站.md
+++ b/product/域名与网站/网站备案/备案小程序流程指引/批量取消接入网站.md
@@ -13,12 +13,12 @@
 1. 请使用微信扫一扫小程序码进入备案小程序。
 ![](https://main.qcloudimg.com/raw/f4cb3b91fdcac1b1d4274efcbd955c2e.jpg)
 2. 已登录您的腾讯云账号。
-3. 单击网站信息右下方的【更多操作】，可显示网站相关操作按钮。如下图所示：
+3. 单击网站信息右下方的**更多操作**，可显示网站相关操作按钮。如下图所示：
 ![](https://main.qcloudimg.com/raw/bc24e022cec7c999c9fa7fa186bc0451.jpeg)
-4. 单击【批量取消接入网站】，进入 “取消接入须知” 页面中，并单击【下一步】。
-5. 进入 “选择网站” 页面，勾选所需取消接入的网站，并单击【确定】。如下图所示：
+4. 单击**批量取消接入网站**，进入 “取消接入须知” 页面中，并单击**下一步**。
+5. 进入 “选择网站” 页面，勾选所需取消接入的网站，并单击**确定**。如下图所示：
 ![](https://main.qcloudimg.com/raw/7ed67e66fcf67dd9a7d474b42e35b175.jpeg)
-6. 进入 “验证备案” 页面，获取并填写验证码后，单击【确定】，即可提交至管局审核。如下图所示：
+6. 进入 “验证备案” 页面，获取并填写验证码后，单击**确定**，即可提交至管局审核。如下图所示：
 ![](https://main.qcloudimg.com/raw/72587378255090f90ece3f738cd51e62.jpeg)
 
 >!取消接入管局审核一般3 - 5个工作日，请您耐心等待管局审核。成功办理取消接入网站后，腾讯云会以短信和电子邮件的形式通知您，请注意查收。
