--- a/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/变更备案.md
+++ b/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/变更备案.md
@@ -64,9 +64,9 @@
 
 ## 备案流程
 ### 步骤1：进入变更备案流程
-1. 登录 [腾讯云网站备案控制台](https://console.cloud.tencent.com/beian)，进入 “我的备案” 管理页面，单击【变更备案】。如下图所示：
+1. 登录 [腾讯云网站备案控制台](https://console.cloud.tencent.com/beian)，进入 “我的备案” 管理页面，单击**变更备案**。如下图所示：
 ![](https://main.qcloudimg.com/raw/b222712e6a1eb76f162d571487ffa9f0.png)
-3. 在弹出的 “确认变更备案” 窗口中，单击【知道了】，进入 “修改主体信息” 步骤。
+3. 在弹出的 “确认变更备案” 窗口中，单击**知道了**，进入 “修改主体信息” 步骤。
 ![](https://main.qcloudimg.com/raw/15f41dd0a3858fe4d45441d5ac17b427.png)
 
 ### 步骤2：修改主体信息
@@ -155,14 +155,14 @@
 </tr>
 <tr>
 <td>验证码</td>
-<td>请输入主体负责人的手机号码后，单击【获取验证码】并填写。</td>
+<td>请输入主体负责人的手机号码后，单击<b>获取验证码</b>并填写。</td>
 </tr>
 <tr>
 <td>电子邮箱</td>
 <td>请输入主体负责人的邮箱。</td>
 </tr>
 </tbody></table>
-3. 单击【下一步】，进入 “修改网站信息” 步骤。
+3. 单击**下一步**，进入 “修改网站信息” 步骤。
 
 
 ### 步骤3：修改网站信息
@@ -201,7 +201,7 @@
 </tr>
 </tbody></table>
 2. 在 “网站负责人” 模块，上传相关材料以及修改相关信息。如下图所示：
->?单击【点击上传】，请使用手机打开微信并单击【扫一扫】，扫描页面提供的二维码，并按照要求上传相关信息。
+>?单击**点击上传**，请使用手机打开微信并单击**扫一扫**，扫描页面提供的二维码，并按照要求上传相关信息。
 > 
 ![](https://main.qcloudimg.com/raw/0b3e762c84ea30bd94a9a87294ad6a5e.png)
 <table>
@@ -246,7 +246,7 @@
 </tr>
 <tr>
 <td>验证码</td>
-<td>请输入网站负责人的手机号码后，单击【获取验证码】并填写。</td>
+<td>请输入网站负责人的手机号码后，单击<b>获取验证码</b>并填写。</td>
 </tr>
 <tr>
 <td>电子邮箱</td>
@@ -275,11 +275,11 @@
 <td>需提供 “域名实名认证信息” 截图。请您在域名注册商处获取实名认证信息，截图中需包含域名、域名所有者、所有者证件类型、所有者证件号码、域名过期时间。</td>
 </tr>
 </tbody></table>
-4. 单击【保存当前网站】，即可完成修改网站信息的操作。
-5. 单击【下一步】，进入 “提交备案” 步骤。
+4. 单击**保存当前网站**，即可完成修改网站信息的操作。
+5. 单击**下一步**，进入 “提交备案” 步骤。
 
 ### 步骤4：提交备案
-1. 在 “备案订单” 预览信息页面中，请仔细核对您的备案信息，确认无误后，阅读和勾选**同意，并阅读《信息安全管理协议》和《协助更改备案信息服务在线服务条款》**，并单击【提交审核】。如下图所示：
+1. 在 “备案订单” 预览信息页面中，请仔细核对您的备案信息，确认无误后，阅读和勾选**同意，并阅读《信息安全管理协议》和《协助更改备案信息服务在线服务条款》**，并单击**提交审核**。如下图所示：
 ![](https://main.qcloudimg.com/raw/d0c8cc1b50b0b961523be41ff7721440.png)
 >! 审核专员会在1 - 2个工作日内进行审核并电话联系您沟通确认订单问题，请确保您填写的联系方式真实且可接通。若审核专员首次拨打电话未联系到您，会在1个小时左右再次与您联系。若仍未能与您取得联系，您的备案申请将被驳回。
 >- 若初审通过，初审结果将会在1 - 2个工作日之内通过您提供的电子邮件和电话号码发送给您。
