--- a/product/物联网/物联网开发平台/基础服务/规则引擎/数据转发到第三方服务.md
+++ b/product/物联网/物联网开发平台/基础服务/规则引擎/数据转发到第三方服务.md
@@ -1,6 +1,6 @@
 ## 概述
 
-将通过规则提取出来的消息字段转发给第三方服务时，您可自定义如何处理这些数据。这种方式是提供给用户灵活性最高的一种消息处理方式。
+将通过规则提取出来的设备数据转发给第三方服务时，您可自定义如何处理这些数据。这种方式是提供给用户灵活性最高的一种消息处理方式。
 
 >!第三方服务必须以 HTTP 或 HTTPS 的方式提供服务。配置转发第三方服务，需要提供支持 HTTP 或 HTTPS 的网站 URL 和端口。规则引擎转发成功后，第三方服务将收到来至 `42.193.134.62` 的数据包。
 
@@ -11,22 +11,22 @@
 
 ## 填写服务器配置
 
-1. 登录 [物联网通信控制台](https://console.cloud.tencent.com/iotcloud)， 选择左侧菜单**规则引擎**。
+1. 登录 [物联网开发平台控制台](https://console.cloud.tencent.com/iotexplorer)， 选择左侧菜单**规则引擎**。
 2. 单击所要配置的规则。进入规则详情页面，单击**添加行为操作**。
 3. 在弹出的“添加规则”窗口，填写相关信息。单击**保存**即可。
- - 选择行为类型为“forward”。
+ - 选择行为类型为“Forward”。
  - 填写您的 HTTP 或 HTTPS 服务地址。物联网通信平台会将设备上报的数据转发至 HTTP 或 HTTPS 服务地址。
  - 请勾选 “增加鉴权 Token”，且填写您的服务对应的 Token；您可以任意填写 Token，用作生成签名（该 Token 会和接口 URL 中包含的 Token 进行比对，从而验证安全性）。
    ![](https://main.qcloudimg.com/raw/5a1bfa2f0491b073d4b7218bc96db16c.jpg)
 
 
-## 验证消息来自物联网通信平台
+## 验证消息来自物联网开发平台
 
 >!为了您后台稳定使用，请选择增加鉴权 Token。
 
 ### 请求标识
 
-用户如果在转发到第三方服务（Forward）即 HTTP 转发，已选择“增加鉴权 Token”，物联网通信平台将在 HTTP 或 HTTPS 请求中头部增加如下字段：
+用户如果在转发到第三方服务（Forward）即 HTTP 转发，已选择“增加鉴权 Token”，物联网开发平台将在 HTTP 或 HTTPS 请求中头部增加如下字段：
 
 <table>
 <thead>
@@ -90,7 +90,7 @@ Timestamp: 1604458421
 
 **服务地址校验**
 
-1. 当开启规则引擎时，物联网通信平台将发送一次 GET 请求到填写的服务器地址 URL 上，GET 请求头部增加如下字段：
+1. 当开启规则引擎时，物联网开发平台将发送一次 GET 请求到填写的服务器地址 URL 上，GET 请求头部增加如下字段：
 <table>
 <thead>
 <tr>
@@ -115,7 +115,7 @@ Timestamp: 1604458421
 <td>随机字符串</td>
 </tr>
 </tbody></table>
-物联网通信平台向第三方服务发送报文示例：
+物联网开发平台向第三方服务发送报文示例：
 <dx-codeblock>
 :::  HTTP
 GET / HTTP/1.1
@@ -130,7 +130,7 @@ Accept-Encoding: gzip
 :::
 </dx-codeblock>
 2. 第三方服务若确认此次 GET 请求来自物联网通信平台，请在 body 中原样返回 Echostr 参数内容。
-第三方服务回复物联网通信平台报文示例：
+第三方服务回复物联网开发平台报文示例：
 <dx-codeblock>
 :::  HTTP
 HTTP/1.1 200 OK
@@ -141,7 +141,7 @@ Content-Type: text/plain; charset=utf-8
 UPWIAFASvDUFcTEE
 :::
 </dx-codeblock>
-3. 物联网通信平台校验返回的 Echostr 参数内容，确认服务器地址 URL 是否有效。
+3. 物联网开发平台校验返回的 Echostr 参数内容，确认服务器地址 URL 是否有效。
 
 ## 重发机制
 
