--- a/product/物联网/物联网开发平台/基础服务/规则引擎/数据处理.md
+++ b/product/物联网/物联网开发平台/基础服务/规则引擎/数据处理.md
@@ -1,5 +1,5 @@
 
-创建完规则，即可编写 SQL 对某一类 Topic 中数据的处理。物联网通信控制台提供了 SQL 填写的方式，简化 SQL 语句的生成。
+创建完规则，即可编写 SQL 对某一类 Topic 中数据的处理。物联网开发平台提供了 SQL 填写的方式，简化 SQL 语句的生成。
 
 
 将 Topic 为`E23VBC3GE8/device_02/event`中的 JSON 消息的`action targetDevice count`三个字段提取出来，再通过`count <=3`对数据进行过滤，得到最终处理过的数据，用于下一步数据转发。下图中示例表达的规则：
@@ -10,14 +10,12 @@
 - 数据转发到另一个 Topic。
 - 数据转发到第三方服务。
 - 数据转发到消息队列 CKafka。
-- 数据转发到消息队列 CMQ-Topic。
-- 数据转发到消息队列 CMQ-队列模型。
 - 数据转发到时序数据库 CTSDB。
 - 数据转发到云数据库 MySQL。
 - 数据转发到云数据库 MongoDB。
 
 在触发转发行为时，规则引擎会对设备上报的 payload， 进行JSON 封装，格式示例如下：
-1. 转发到 CMQ/Ckafka 的 JSON 示例：
+1. 转发到 Ckafka 的 JSON 示例：
 ```
 {
   "MsgType":    "Publish",
