--- a/product/物联网/物联网开发平台/基础服务/规则引擎/数据转发到云开发.md
+++ b/product/物联网/物联网开发平台/基础服务/规则引擎/数据转发到云开发.md
@@ -5,7 +5,7 @@
 ![](https://main.qcloudimg.com/raw/7d05d865800b63e369f8f34c193ca100.png)
 
 ## 配置
-1. 登录 [物联网通信控制台](https://console.cloud.tencent.com/iotcloud)，单击左侧菜单**规则引擎**。
+1. 登录 [物联网开发平台控制台](https://console.cloud.tencent.com/iotexplorer)，单击左侧菜单**规则引擎**。
 2. 进入规则引擎页面，单击需要配置的规则。
 3. 在规则详情页面，单击**添加行为操作**。
 >?第一次使用时会提示用户授权访问云开发，您需单击**立即授权**才能继续创建。
