--- a/product/物联网/物联网开发平台/基础服务/规则引擎/数据转发到时序数据库.md
+++ b/product/物联网/物联网开发平台/基础服务/规则引擎/数据转发到时序数据库.md
@@ -6,7 +6,7 @@
 ![](https://main.qcloudimg.com/raw/d2fae7f6ac3e4d3cfe94d8c51c2725c9.png)
 
 ## 配置步骤
-1. 登录 [物联网通信控制台](https://console.cloud.tencent.com/iotcloud)，选择左侧菜单**规则引擎**。
+1. 登录 [物联网开发平台控制台](https://console.cloud.tencent.com/iotexplorer)，单击左侧菜单**规则引擎**。
 2. 进入规则详情页面，单击**添加行为操作**。
 >?第一次使用时会提示用户授权访问 CTSDB，用户需单击**授权访问 CTSDB **才能继续创建。
 ![avatar](https://main.qcloudimg.com/raw/fa05765a6ca562907abf57e6718962c8.png) 
@@ -14,7 +14,7 @@
 ![avatar](https://main.qcloudimg.com/raw/0cdece2231af0f694ea15ca4e672e4e7.png) 
 
 
-完成以上配置后，物联网通信平台会将符合规则条件的设备上报数据，转发至用户配置的 CTSDB 实例。用户可参考 [CTSDB 开发指南](https://cloud.tencent.com/document/product/652/13611) 在自己的应用服务器上读取数据进行处理，或者在 [CTSDB 控制台](https://console.cloud.tencent.com/ctsdb) 对数据进行聚合检索查询。
+完成以上配置后，物联网开发平台会将符合规则条件的设备上报数据，转发至用户配置的 CTSDB 实例。用户可参考 [CTSDB 开发指南](https://cloud.tencent.com/document/product/652/13611) 在自己的应用服务器上读取数据进行处理，或者在 [CTSDB 控制台](https://console.cloud.tencent.com/ctsdb) 对数据进行聚合检索查询。
 
 ## 配置参数说明
 - **实例登录账户**：用户创建 CTSDB 实例时候输入的账户名，需要在配置规则引擎之前创建实例。
@@ -35,7 +35,7 @@
 
 >?
 - 默认存储类型：动态扩展存储的字段，在 CTSDB 中的存储类型，默认是 tag 类型
-- key：需要遍历扩展存储的 json 键，物联通信平台会遍历此 key 下的 json 键值嵌套，以'_'为连接符，最后存储到时序数据库，通过规则引擎配置 SQL SELECT 检索得到的 json 结果与配置（支持配置子 key，支持配置多个），到实际存储进 CTSDB 的数据，如下样例所示：
+- key：需要遍历扩展存储的 json 键，物联网开发平台会遍历此 key 下的 json 键值嵌套，以'_'为连接符，最后存储到时序数据库，通过规则引擎配置 SQL SELECT 检索得到的 json 结果与配置（支持配置子 key，支持配置多个），到实际存储进 CTSDB 的数据，如下样例所示：
 
 ![](https://main.qcloudimg.com/raw/c3bfb94a9d82abdebdf36d392a1a4151.png)
 
