--- a/product/监控与管理/云拨测（新）/购买指南/计费概述.md
+++ b/product/监控与管理/云拨测（新）/购买指南/计费概述.md
@@ -41,7 +41,7 @@
 - 相关限制：无限制。
 - 计费价格：
   云拨测专家版为您提供免费额度，超出免费额度后将按下列表格单价进行计费
-  - 机房（IDC ）+网民（LastMile）免费额度：3000次。
+  - 机房（IDC ）+网民（LastMile）免费额度：3000次/月。
   - 手机端：无免费额度。
 <table>
 			<tr>
