--- a/product/教育/企业直播/常见问题.md
+++ b/product/教育/企业直播/常见问题.md
@@ -1,14 +1,14 @@
 ### 如何找到客服管家？
-- 方式1：通过 [企业直播官网](https://live.xiaoe-tech.com/)。
-- 方式2：企业直播管理台首页。
+- 方式1：通过 [私域直播官网](https://live.xiaoe-tech.com/)。
+- 方式2：私域直播管理台首页。
 
 ### 如何开通试用版店铺？
-1. 单击【创建企业直播】，输入企业直播名称，再单击【开始创建】，企业直播创建完成。
-2. 创建完成后，左侧菜单栏会有企业直播的主要功能模块，包括直播管理、营销中心、商品管理、用户管理等功能。
+1. 单击【创建私域直播】，输入私域直播名称，再单击【开始创建】，私域直播创建完成。
+2. 创建完成后，左侧菜单栏会有私域直播的主要功能模块，包括直播管理、营销中心、商品管理、用户管理等功能。
 
 ### 如何进行直播认证？
 - 已付费的正式版客户在创建直播时系统会进行认证提醒，也可以通过【店铺设置】>【店铺认证】模块进行认证。
-- 进入 [店铺认证](https://live-admin.xiaoe-tech.com/shopSetting#/shopSetting ) 页面，填写企业直播店铺认证相关资料，提交审核。
+- 进入 [店铺认证](https://live-admin.xiaoe-tech.com/shopSetting#/shopSetting ) 页面，填写私域直播店铺认证相关资料，提交审核。
 ![](https://main.qcloudimg.com/raw/ad3da14ee20d10925df24a662a97cd5d.png)
 - 审核需要24小时处理，审核期间可以正常创建直播，审核结果会在管理台进行通知。
 
