--- a/product/教育/企业直播/产品概述.md
+++ b/product/教育/企业直播/产品概述.md
@@ -8,7 +8,7 @@
 支持客户端、Web 端、H5、小程序、App、OBS 等多种开播方式。通过多平台推流转播，实现一次创建多端开播，极大降低直播门槛。
 
 ### 直播互动
-企业通过点赞、打赏、连麦等方式丰富直播内容，增加直播间活跃度，增加公域用户到私域的转化几率。
+通过点赞、打赏、连麦等方式丰富直播内容，增加直播间活跃度，增加公域用户到私域的转化几率。
 
 ### 营销带货
 支持在直播间内配置实物和虚拟商品，边直播边卖货，用户可以在直播间内完成一键下单购买。提供多种营销功能插件，助力企业提高付费转化率。
