--- a/product/计算与网络/共享流量包/操作指南/限制说明.md
+++ b/product/计算与网络/共享流量包/操作指南/限制说明.md
@@ -10,56 +10,57 @@
 
 ## [抵扣限制](id:deduction-limits)
 - 闲时流量包仅在闲时时间段自动生效，并自动抵扣支持的按流量计费的资源。闲时流量包中的“闲时”是指该地域时间的0:00-8:00时间段，有夏令时的地域不考虑夏令时。为方便理解，此处提供各地域闲时时间段对应的北京时间。
-	<table>
-	<thead>
-	<tr>
-	<th width="65%">地域（闲时时间0:00-8:00）</th>
-	<th style="text-align:center;">对应北京时间</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr>
-	<td>新加坡</td>
-	<td>0:00-8:00</td>
-	</tr>
-	<tr>
-	<td>曼谷/雅加达</td>
-	<td>1:00-9:00</td>
-	</tr>
-	<tr>
-	<td>孟买</td>
-	<td>2:00-10:00</td>
-	</tr>
-	</tr>
-	<tr>
-	<td>首尔/东京</td>
-	<td>23:00-7:00</td>
-	</tr>
-	<tr>
-	<td>硅谷</td>
-	<td>15:00-23:00</td>
-	</tr>
-	<tr>
-	<td>弗吉尼亚</td>
-	<td>12:00-20:00</td>
-	</tr>
-	<tr>
-	<td>多伦多/圣保罗</td>
-	<td>13:00-21:00</td>
-	</tr>
-	<tr>
-	<td>法兰克福</td>
-	<td>6:00-14:00</td>
-	</tr>
-	<tr>
-	<td>莫斯科</td>
-	<td>4:00-12:00</td>
-	</tr>
-	<tr>
-	<td>其他地域</td>
-	<td>0:00-8:00</td>
-	</tr>
-	</tbody></table>
+<table>
+<thead>
+<tr>
+<th width="50%">地域（闲时时间0:00-8:00）</th>
+<th width="50%" style="text-align:center;">对应北京时间</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>新加坡</td>
+<td>0:00-8:00</td>
+</tr>
+<tr>
+<td>曼谷/雅加达</td>
+<td>1:00-9:00</td>
+</tr>
+<tr>
+<td>孟买</td>
+<td>2:00-10:00</td>
+</tr>
+</tr>
+<tr>
+<td>首尔/东京</td>
+<td>23:00-7:00</td>
+</tr>
+<tr>
+<td>硅谷</td>
+<td>15:00-23:00</td>
+</tr>
+<tr>
+<td>弗吉尼亚</td>
+<td>12:00-20:00</td>
+</tr>
+<tr>
+<td>多伦多/圣保罗</td>
+<td>13:00-21:00</td>
+</tr>
+<tr>
+<td>法兰克福</td>
+<td>6:00-14:00</td>
+</tr>
+<tr>
+<td>莫斯科</td>
+<td>4:00-12:00</td>
+</tr>
+<tr>
+<td>其他地域</td>
+<td>0:00-8:00</td>
+</tr>
+</tbody>
+</table>
 
 
 - 若是闲时时间段（即该地域时间的0:00-8:00），则优先抵扣闲时流量包，闲时流量包抵扣完以后再抵扣全时流量包；若非闲时时间段，则闲时流量包不可抵扣，只能抵扣全时流量包。
