--- a/product/监控与管理/前端性能监控/常见问题/技术排查相关问题.md
+++ b/product/监控与管理/前端性能监控/常见问题/技术排查相关问题.md
@@ -5,8 +5,10 @@
 
 ### 接口请求报错 403 要怎么处理？[](id:que2)
 
-接口403一般是因为页面域名校验失败导致的，可以检查项目创建时候设置的域名跟实际上报的域名是否一致。如果项目为非 Web 项目，这个域名需要填 `*`。
+接口403一般是因为页面域名校验失败导致的，可以检查项目创建时候设置的域名跟实际上报的域名是否一致。如果项目不需要校验，域名可以填 `*`。
 ![](https://main.qcloudimg.com/raw/2f0d5075339146c01cf4e6a5571211bb.png)
+
+如果不确定您的上报域名是什么的话，可以在浏览器控制台输入 `location.host` 查看。对于非 web 项目，默认填了 `*` 表示不需要校验。
 
 用户在 RUM 上创建项目后，会得到一个长度为 18 位的字符串，这个字符串为上报 ID，new Aegis 的时候传入的 ID 就是这个上报 ID。如果这个 ID 不正确，也会报403。
 
