docs: 前端性能监控增添 apiDetail 参数

--- a/product/监控与管理/前端性能监控/接入指南/小程序场景/配置文档.md
+++ b/product/监控与管理/前端性能监控/接入指南/小程序场景/配置文档.md
@@ -15,7 +15,7 @@
 | speedUrl     | 可选，string，默认 `//aegis.qq.com/speed`。 <br>测速日志上报地址。 |
 | performanceUrl | 可选，string，默认 `//aegis.qq.com/speed/performance`。 <br>页面性能日志上报地址。 |
 | whiteListUrl   | 可选，string，默认 `//aegis.qq.com/collect/whitelist`。 <br>白名单确认接口  如果想要关闭白名单接口请求，可以传空字符串。 |
-| api      | 可选，object，默认为 `{}`。<br>相关的配置:  retCodeHandler: Function， 返回码上报钩子函数。 会传入接口返回数据，返回值为 `{isErr: boolean, code: string}`。详情请参见 [api.retCodeHandler](#exp1)。 |
+| api      | 可选，object，默认为 `{}`。<br> apiDetail : 可选，boolean，默认 false。API 失败或者白名单用户上报 API 信息的时候，是否上报 API 的请求参数和返回值，默认不上报; <br>相关的配置:  retCodeHandler: Function， 返回码上报钩子函数。 会传入接口返回数据，返回值为 `{isErr: boolean, code: string}`。详情请参见 [api.retCodeHandler](#exp1)。 |
 | ext1       | 可选，string，自定义上报的额外维度，上报的时候可以被覆盖。   |
 | ext2       | 可选，string，自定义上报的额外维度，上报的时候可以被覆盖。   |
 | ext3       | 可选，string，自定义上报的额外维度，上报的时候可以被覆盖。   |
