--- a/product/监控与管理/前端性能监控/接入指南/web应用场景/配置文档.md
+++ b/product/监控与管理/前端性能监控/接入指南/web应用场景/配置文档.md
@@ -18,7 +18,7 @@
 | repeat           | 可选，number，默认 5。<br>重复上报次数，对于同一个错误超过多少次不上报。 |
 | offlineLog       | 可选，boolean，默认 false。<br>是否使用离线日志。              |
 | offlineLogExp    | 可选，number，默认 3。<br>离线日志过期天数。                   |
-| api              | 可选，object，默认为{}。相关的配置： <br> retCodeHandler: Function(data: String, url: String, xhr: Object):{isErr: boolean, code: string}， 返回码上报钩子函数。 会传入接口返回数据，请求 URL 和 XHR 对象。<br> resourceTypeHandler: Function，请求资源类型修正钩子函数 会传入接口 URL，返回值为 <code>static</code> 或 <code>fetch</code>。详情请参见 <span id="jump">[api.retCodeHandler](#exp1)</span>。 |
+| api              | 可选，object，默认为{}。相关的配置： <br> apiDetail : 可选，boolean，默认 false。API 失败或者白名单用户上报 API 信息的时候，是否上报 API 的请求参数和返回值，默认不上报; <br> retCodeHandler: Function(data: String, url: String, xhr: Object):{isErr: boolean, code: string}， 返回码上报钩子函数。 会传入接口返回数据，请求 URL 和 XHR 对象。<br> resourceTypeHandler: Function，请求资源类型修正钩子函数 会传入接口 URL，返回值为 <code>static</code> 或 <code>fetch</code>。详情请参见 <span id="jump">[api.retCodeHandler](#exp1)</span>。 |
 | speedSample      | 可选，boolean，默认 true。<br>测速日志是否抽样（限制每条url只上报一次测速日志）。 |
 | hostUrl | 可选，默认是 <code>aegis.qq.com</code>。<br>影响全部上报数据的 host 地址，下面几个 URL 地址设置后会覆盖对应的上报地址。
 | url | 可选，string，默认 <code>//aegis.qq.com/collect</code>。<br>日志上报地址。|
