--- a/product/监控与管理/前端性能监控/接入指南/小程序场景/安装和初始化.md
+++ b/product/监控与管理/前端性能监控/接入指南/小程序场景/安装和初始化.md
@@ -1,8 +1,8 @@
 小程序仅支持 NPM 方式安装 SDK 。
 
 > ?aegis-sdk 默认使用 `aegis.qq.com` 作为上报域名，您也可以选择使用 `tamaegis.com` 作为上报域名。
->
-> 重要：正式环境接入小程序需要将上报域名添加到安全域名中。
+
+>! 正式环境接入小程序需要将上报域名添加到安全域名中。
 
 ## 安装 SDK
 
