--- a/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
@@ -1,9 +1,9 @@
 
 ## 配置场景
 
-由于腾讯云 CDN 为后付费计费，若您担心由于恶意用户盗刷产生大量带宽，费用剧增，可通过设置带宽封顶配置进行用量控制（针对带宽计费用户）。
+腾讯云 CDN 带宽计费为按量后付费，对于带宽计费的用户，若您担心由于恶意用户盗刷产生大量带宽，费用剧增，可通过设置带宽封顶配置进行用量控制。
 
-带宽封顶配置通过检测每一个统计周期（5分钟粒度）产生的带宽，若超出指定阈值，会根据配置进行强制回源，或关闭 CDN 服务（全部请求返回404），避免产生更多 CDN 加速费用。
+当统计周期（5分钟）产生的带宽超出配置的告警阈值时，CDN 会推送消息通知您；若超出配置的访问阈值，则关闭 CDN 服务，或请求直接返回源站，避免产生更多 CDN 服务费用。
 
 >!
 >- 带宽封顶配置生效存在一定延迟（10分钟左右），期间产生的消耗会正常计费。更多说明请参见 [高额账单风险警示](https://cloud.tencent.com/document/product/228/51813)。
@@ -15,9 +15,16 @@
 ![](https://main.qcloudimg.com/raw/25e10fc930c41828487acff1590fd148.png)
 ### 修改配置
 #### 1. 修改配置
-单击开关，可对阈值上限进行配置：
-- COS 源域名仅可支持到达阈值后，所有访问均返回404。
-- 检测到域名带宽超出阈值后，访问回源或访问返回404配置均需要全网节点逐步下发生效，因此可能存在一定的生效延迟。
+单击开启配置开关，进行具体配置：
+
+- 访问阈值：配置访问上限值。
+- 超出阈值处理：超出配置的访问上限值时：
+   1. 访问回源（即请求直接返回源站）
+   2. 或访问返回404（即关闭CDN服务）。您可后续在域名管理页面重新上线域名，恢复CDN服务。
+    注：对源站类型为 COS 源域名，仅支持访问返回404（即关闭CDN服务）
+- 告警阈值：当 访问带宽/访问阈值 的比值超出配置的百分比时（仅可填写10的倍数，10% - 90%），CDN将推送告警消息。默认未开启。
+
+>! 检测到域名带宽超出阈值后，访问回源或访问返回404配置均需要全网节点逐步下发生效，因此会有一定的生效延迟。
 
 ![](https://main.qcloudimg.com/raw/e06af43f5fbdaf5f0a77d7b532e6d0dd.png)
 
