--- a/product/移动与通信/云开发低代码平台/产品动态.md
+++ b/product/移动与通信/云开发低代码平台/产品动态.md
@@ -82,7 +82,7 @@
 <tbody>
 <tr>
 <td>优化小程序发布流程</td>
-<td>在应用部署完成后，可直接在【应用版本管理页】进行提审和正式发布。提供快速注册小程序能力，只需简单几个步骤，即可拥有微信企业或个人小程序。
+<td>在应用部署完成后，可直接在**应用版本管理页**进行提审和正式发布。提供快速注册小程序能力，只需简单几个步骤，即可拥有微信企业或个人小程序。
 </td>
 <td>2021-06</td>
 <td><ul style = "margin-bottom: 0px;"><li><a href="https://cloud.tencent.com/document/product/1301/55140">应用发布到小程序</a></li><li>
@@ -190,7 +190,7 @@
 <tbody>
 <tr>
 <td>新增多模块混合开发功能</td>
-<td>应用可拆分为各自解耦、相对独立的主模块和多个子模块，分模块进行开发，支持【低代码开发】和【上传代码包】两种开发模式。
+<td>应用可拆分为各自解耦、相对独立的主模块和多个子模块，分模块进行开发，支持**低代码开发**和**上传代码包**两种开发模式。
 </td>
 <td>2021-05</td>
 <td><a href="https://cloud.tencent.com/document/product/1301/55842">分模块混合开发介绍</a></td>
