--- a/product/移动与通信/云开发低代码平台/常见问题.md
+++ b/product/移动与通信/云开发低代码平台/常见问题.md
@@ -34,7 +34,7 @@
 
 [](id:que7)
 ### 小程序（预览版）部署失败？
-请检查 CI 白名单是否已关闭，登录 [小程序后台](https://mp.weixin.qq.com/)，在【开发】>【开发管理】>【开发设置】中，IP 白名单必须是禁用状态。
+请检查 CI 白名单是否已关闭，登录 [小程序后台](https://mp.weixin.qq.com/)，在**开发** > **开发管理** > **开发设置**中，IP 白名单必须是禁用状态。
 
 
 ![](https://main.qcloudimg.com/raw/c9fbde9cb8b10b56656a8bf5fbd70d83.png)
@@ -46,11 +46,11 @@
 [](id:que9)
 ### 如何为子账号授权以实现多人协作？
 1. 主账号登录 [账号中心](https://console.cloud.tencent.com/developer)。
-2. 单击【快速进入CAM】进入访问管理控制台。
+2. 单击**快速进入CAM**进入访问管理控制台。
 ![](https://main.qcloudimg.com/raw/dc155d89fc267bce6e4e44cf585360c9.png)
-3. 单击【用户】>【[用户列表](https://console.cloud.tencent.com/cam)】，单击操作栏下的【授权】进入对应子账号的设置页面。
+3. 单击**用户** > **[用户列表](https://console.cloud.tencent.com/cam)**，单击操作栏下的**授权**进入对应子账号的设置页面。
 ![](https://main.qcloudimg.com/raw/76316f3a5b458fb6639a64b0f78b6562.png)
-3. 在选择策略下方的搜索栏搜索 `QcloudLowCodeFullAccess`，如下图勾选对应的预设策略，单击【确定】，完成主账号为子账号的授权操作。
+3. 在选择策略下方的搜索栏搜索 `QcloudLowCodeFullAccess`，如下图勾选对应的预设策略，单击**确定**，完成主账号为子账号的授权操作。
 ![](https://main.qcloudimg.com/raw/4c5c1b417ba35866edd4f8f1e6565bec.png)
 
 [](id:que10)
