--- a/product/移动与通信/云开发低代码平台/快速入门/编辑器介绍.md
+++ b/product/移动与通信/云开发低代码平台/快速入门/编辑器介绍.md
@@ -61,5 +61,5 @@
 |---------|---------|
 | 数据 | 对组件、页面或应用的数据属性进行静态设置，或与变量进行动态绑定。 |
 | 样式 | 对组件或页面进行可视化的样式设置。|
-| 事件 |对组件进行事件的绑定及监听，可实现点击弹窗、点击跳转等功能。|
+| 事件 |对组件进行事件的绑定及监听，可实现单击弹窗、单击跳转等功能。|
 
