--- a/product/移动与通信/云开发低代码平台/官方组件库/扫码.md
+++ b/product/移动与通信/云开发低代码平台/官方组件库/扫码.md
@@ -3,7 +3,7 @@
 ## 操作步骤
 1. 进入应用编辑器并选择需要触发的组件。
 2. 打开编辑器右侧的**组件编辑** > **事件**页面。
-3. **触发条件**选择 `tap（点击）`，**动作类型**选择`平台方法`，**执行动作**选择`sacnCode 扫码`。
+3. **触发条件**选择 `tap（单击）`，**动作类型**选择`平台方法`，**执行动作**选择`sacnCode 扫码`。
 其中 IDE 可以配置几个动作参数：
  - 是否只能从相机扫码，不允许从相册选择图片， 默认为否。
  - 是否开启默认行为， 在 Web 环境下若扫码内容为链接则自动弹窗打开，否则展示扫码内容。在小程序环境下自动弹窗显示内容。
