--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭瑜伽会馆小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭瑜伽会馆小程序模板.md
@@ -18,11 +18,11 @@
 ### 编辑器整体介绍
 
 ![img](https://main.qcloudimg.com/raw/c80da660f3b207d0dd3e42113dc2387e.png)        
-- 【页面管理】支持切换页面，对所有页面进行个性化装修
-- 【编辑区】点击选中要编辑的组件
-- 【预览区】可查看页面效果
-- 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- 【组件】模版所带组件库，可用于新页面开发
+- **页面管理**支持切换页面，对所有页面进行个性化装修
+- **编辑区**单击选中要编辑的组件
+- **预览区**可查看页面效果
+- **组建编辑**可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
+- **组件**模版所带组件库，可用于新页面开发
 
 ### 设置首页背景图片
 打开左侧大纲树选择对应的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行首页背景图的替换。
