--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭装修行业小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭装修行业小程序模板.md
@@ -21,11 +21,11 @@
  #### 组件编辑
 ![img](https://main.qcloudimg.com/raw/3dc9d4fb2d4c279c9c9ef2a5dc89b6f4.png)        
 
-- 【页面管理】支持切换页面，对所有页面进行个性化装修
-- 【编辑区】点击选中要编辑的组件
-- 【预览区】可查看页面效果
-- 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- 【组件】模版所带组件库，可用于新页面开发
+- **页面管理**支持切换页面，对所有页面进行个性化装修
+- **编辑区**单击选中要编辑的组件
+- **预览区**可查看页面效果
+- **组建编辑**可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
+- **组件**模版所带组件库，可用于新页面开发
 
 ### 修改页面样式与数据
 打开左侧大纲树选择对应的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行图片的替换。
