--- a/product/移动与通信/云开发低代码平台/微搭应用市场/计费概述.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/计费概述.md
@@ -8,11 +8,11 @@
  - 产品能力包：赠送：“基础版”，周期和应用模板一样（赠送一年，后续需独立续费）。
  - 环境包：赠送环境包B，周期和应用模板一样（赠送一年，后续需独立续费）。
 2. 用户低码账号下已有低码套餐包：
- - 原产品能力包【基础版】以上：保持原有套餐包不变（周期也不变），如果产品能力包到期需要操作续费，否则模板不可用。
- - 原产品能力包【基础版】：到期日小于购买到期日，调整至和该模板到期日相同。
- - 原【环境包B】以上：保持原有套餐包不变（周期也不变），如果环境包到期需续费，否则模板不可用。
- - 原【环境包B】：到期日小于购买到期日，调整至和该模板到期日相同。
- - 原【环境包A】：升级到B环境包，到期日小于购买到期日，到期日调整到与该模版到期日相同。
+ - 原产品能力包**基础版**以上：保持原有套餐包不变（周期也不变），如果产品能力包到期需要操作续费，否则模板不可用。
+ - 原产品能力包**基础版**：到期日小于购买到期日，调整至和该模板到期日相同。
+ - 原**环境包B**以上：保持原有套餐包不变（周期也不变），如果环境包到期需续费，否则模板不可用。
+ - 原**环境包B**：到期日小于购买到期日，调整至和该模板到期日相同。
+ - 原**环境包A**：升级到B环境包，到期日小于购买到期日，到期日调整到与该模版到期日相同。
  - 原环境试用情况：统一升级到环境包A，到期日小于体验到期日，到期日调整到与该模版体验到期日相同。
 
 ## 购买到期
