--- a/product/移动与通信/云开发低代码平台/快速入门/创建第一个低码应用.md
+++ b/product/移动与通信/云开发低代码平台/快速入门/创建第一个低码应用.md
@@ -12,17 +12,17 @@
 
 ## 步骤3：体验 demo 或创建应用
 
-1. 首次进入腾讯云微搭低代码控制台，您可以选择创建【体验demo】或直接【创建应用】。
+1. 首次进入腾讯云微搭低代码控制台，您可以选择创建**体验demo**或直接**创建应用**。
 <img src="https://main.qcloudimg.com/raw/41a46b08fb33a30ed52032539f4bc7c7.png" width="90%"></img><br>
 2. 单击后需填写**应用基础信息** 。<br>
 <img src="https://main.qcloudimg.com/raw/3b931c5671b419e3bcd226f4a7b209cd.jpg" width="70%"></img>
 <dx-alert infotype="explain" title="">
-**应用基础信息**包括应用名称、应用描述和应用环境。应用环境用于存放应用，推荐您选择【自动创建】，系统会优先为您创建免费环境，并将后续的应用都存在于该环境中。若您已有 [云开发环境](https://console.cloud.tencent.com/tcb/env)，可以选择将应用创建在已有环境中。
+**应用基础信息**包括应用名称、应用描述和应用环境。应用环境用于存放应用，推荐您选择**自动创建**，系统会优先为您创建免费环境，并将后续的应用都存在于该环境中。若您已有 [云开发环境](https://console.cloud.tencent.com/tcb/env)，可以选择将应用创建在已有环境中。
 </dx-alert>
 
 ## 步骤4：编辑应用
 
-1. 单击应用卡片上的【<img src="https://main.qcloudimg.com/raw/67d61434e8d509fe5b203a2befcbdec0.jpg" width="2.4%">】，可以直接进入到应用的编辑器。
+1. 单击应用卡片上的**<img src="https://main.qcloudimg.com/raw/67d61434e8d509fe5b203a2befcbdec0.jpg" width="2.4%">**，可以直接进入到应用的编辑器。
 ![](https://main.qcloudimg.com/raw/7863f0b9f90f9d3ee9e59844891488ae.png)
 2. 在应用编辑器即可开始应用设计。
 ![](https://main.qcloudimg.com/raw/82de98b6a41c344e38358c86d19d945c.png)
