--- a/product/数据库/图数据库EasyGraph/快速入门/创建.md
+++ b/product/数据库/图数据库EasyGraph/快速入门/创建.md
@@ -13,9 +13,8 @@
 
 ## 操作步骤
 1. 登录 [KonisGraph 购买页](https://buy.cloud.tencent.com/konisgraph)，根据实际需求选择各项配置信息，确认无误后，单击**免费申请试用**。
-  - **架构**：架构介绍请参见 [数据库架构](https://cloud.tencent.com/document/product/236/17136)。
-
+>?架构介绍请参见 [产品架构](https://cloud.tencent.com/document/product/1366/61166)。
 2. 返回控制台实例列表，会看到实例显示**创建中**，请耐心等待，待实例状态变为**运行中**，即可进行操作。
 
 ## 后续操作
-通过控制台初始化 KonisGraph 实例，请参见【初始化 KonisGraph 实例】。
+通过控制台初始化 KonisGraph 实例，请参见 [初始化 KonisGraph 实例](https://cloud.tencent.com/document/product/1366/61173)。
