--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/设置引导操作.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/设置引导操作.md
@@ -24,7 +24,7 @@ EMR 实例的生产流程分为以下几个步骤：
 ![](https://main.qcloudimg.com/raw/215f2620a49d7b17be7510a92db6209b.png)
  - 参数：执行脚本的参数。不同的参数以空格分割，参数中不能有空格，“参数”和“脚本名”之和小于240个字符。
 
-**方法二：在集群【基本信息】页添加引导操作**
+**方法二：在集群基本信息页添加引导操作**
 1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。然后选择**基本信息 > 引导操作**，单击**添加引导操作**，即可添加引导操作。
 2. 添加引导操作完成支持编辑与删除操作。
  - 选择运行时机，并填写相关参数。
