Update and rename product/大数据与AI/弹性MapReduce/操作指南/集群管理/实例信息.md to product/大数据与AI/弹性MapReduce/操作指南/管理集群/实例信息.md

--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/实例信息.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/实例信息.md
@@ -7,8 +7,8 @@
 本文为您介绍如何通过控制台查看集群实例信息。
 
 ## 操作步骤
-1. 集群创建成功后，登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】页面单击需要管理的集群【ID/名称】。
-2. 若当前集群未开启对象存储，可单击【授权】进行授权。
+1. 集群创建成功后，登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在集群列表页面单击需要管理的集群 **ID/名称**。
+2. 若当前集群未开启对象存储，可单击**授权**进行授权。
 ![](https://main.qcloudimg.com/raw/c4318062e39ead2f91ace48bcdf29fa7.png)
 ![](https://main.qcloudimg.com/raw/04387248e025d3be75cc2c7f7fd0ea9b.png)
 如需精细化授权，可设置自定义服务角色，用于大数据作业运行时访问云上资源。自定义服务角色类型为“腾讯云产品服务”，支持角色的服务选择“弹性MapReduce”。
