--- a/product/存储与CDN/内容分发网络/产品介绍/产品动态.md
+++ b/product/存储与CDN/内容分发网络/产品介绍/产品动态.md
@@ -5,6 +5,12 @@ table th:nth-of-type(3){ width:16%; }
 table th:nth-of-type(4){ width:19%; } 
 </style>
 
+## 2021年09月
+| 动态名称 | 动态描述                                               | 发布时间   | 相关文档                                                     |
+| -------- | ------------------------------------------------------ | ---------- | ------------------------------------------------------------ |
+|带宽封顶配置支持设置百分比告警阈值|带宽封顶配置支持设置百分比告警阈值，当访问带宽/带宽阈值 的比值达到配置的告警阈值时，CDN 将发出告警消息。|2021-09-02 |[带宽封顶配置](https://cloud.tencent.com/document/product/228/41733)|
+
+
 ## 2021年08月
 | 动态名称 | 动态描述                                               | 发布时间   | 相关文档                                                     |
 | -------- | ------------------------------------------------------ | ---------- | ------------------------------------------------------------ |
